--- a/Exercise1/product-iphone14-pro-max.html
+++ b/Exercise1/product-iphone14-pro-max.html
@@ -3,7 +3,7 @@
 
 <head>
     <title>iPhone 14 Pro Max | Technodata</title>
-    <link rel="icon" type="image/x-icon" href="/assets/logo.png">
+    <link rel="icon" type="image/x-icon" href="../assets/logo.png">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -12,24 +12,24 @@
 
 <body>
     <header class="header-light-color">
-        <a href="/Exercise1/index.html"><img src="/assets/Technodata-logos_black.png" width="700" height="160"
+        <a href="index.html"><img src="../assets/Technodata-logos_black.png" width="700" height="160"
                 alt="Technodata λογότυτπο"></a>
 
         <nav class="navigation">
-            <a href="/Exercise1/index.html">ΑΡΧΙΚΗ</a>
-            <a href="/Exercise1/product-categories.html#technology" class="active">ΠΡΟΙΟΝΤΑ ΚΑΙ ΤΕΧΝΟΛΟΓΙΑ</a>
-            <a href="/Exercise1/product-categories.html#spiti">ΓΙΑ ΤΟ ΣΠΙΤΙ</a>
-            <a href="/Exercise1/stores.html">ΚΑΤΑΣΤΗΜΑΤΑ</a>
-            <a href="/Exercise1/contact.html">ΕΠΙΚΟΙΝΩΝΙΑ</a>
-            <a href="/Exercise1/about_us.html">ΣΧΕΤΙΚΑ ΜΕ ΕΜΑΣ</a>
+            <a href="index.html">ΑΡΧΙΚΗ</a>
+            <a href="product-categories.html#technology" class="active">ΠΡΟΙΟΝΤΑ ΚΑΙ ΤΕΧΝΟΛΟΓΙΑ</a>
+            <a href="product-categories.html#spiti">ΓΙΑ ΤΟ ΣΠΙΤΙ</a>
+            <a href="stores.html">ΚΑΤΑΣΤΗΜΑΤΑ</a>
+            <a href="contact.html">ΕΠΙΚΟΙΝΩΝΙΑ</a>
+            <a href="about_us.html">ΣΧΕΤΙΚΑ ΜΕ ΕΜΑΣ</a>
         </nav>
     </header>
 
     <main class="main-content">
         <h2>Apple iPhone 14 Pro Max 128GB - Space Black Κινητό Smartphone</h2>
-        <h3> <a href="/Exercise1/products-phones.html">Κινητό Τηλέφωνο</a></h3>
+        <h3> <a href="products-phones.html">Κινητό Τηλέφωνο</a></h3>
         <h4>267271</h4>
-        <img src="/assets/iphone14pro.png" width="350" height="350" alt="Apple iPhone 14 Pro Max">
+        <img src="../assets/iphone14pro.png" width="350" height="350" alt="Apple iPhone 14 Pro Max">
 
         <div class="value">
             <span>€1549.00</span>
@@ -39,7 +39,7 @@
             <div class="outer-box">
                 <div class="manifacturer">
                     <h3>Κατασκευαστής</h3>
-                    <img src="/assets/apple_logo.png" width="100" height="100" alt="Apple λογότυπο">
+                    <img src="../assets/apple_logo.png" width="100" height="100" alt="Apple λογότυπο">
                 </div>
 
                 <div class="perigrafh">
@@ -61,7 +61,7 @@
             </div>
         </section>
 
-        <img src="/assets/analytiko.jpg" alt="Διαφορές καινούριων μοντέλων και σύγκριση χαρακτηριστικών">
+        <img src="../assets/analytiko.jpg" alt="Διαφορές καινούριων μοντέλων και σύγκριση χαρακτηριστικών">
 
         <section class="analytika-xarakthristika">
             <div class="row-title">
@@ -178,7 +178,7 @@
     <section class="forma">
         <h3>Δώστε μας μια βαθμολογία!</h3>
 
-        <form action="/Exercise1/product-iphone14-pro-max.html" class="vathmologia-asteria">
+        <form action="product-iphone14-pro-max.html" class="vathmologia-asteria">
             <p>Βαυμολογήστε μας και αφήστε τα σχόλια σας απο κάτω!</p>
             <input type="radio" id="1ast" name="vathmologia" value="1 αστέρι">
             <label for="1ast">1 αστέρι</label>
@@ -202,16 +202,16 @@
 
     <footer class="footer-content">
         <h4>Βρείτε μας στα ακόλουθα social media</h4>
-        <a href="/Exercise1/index.html"><img src="/assets/facebook_logo.png" width="50" height="50"
+        <a href="index.html"><img src="../assets/facebook_logo.png" width="50" height="50"
                 alt="Facebook λογότυπο"></a>
-        <a href="/Exercise1/index.html"><img src="/assets/twitter_logo.png" width="50" height="50"
+        <a href="index.html"><img src="../assets/twitter_logo.png" width="50" height="50"
                 alt="Twitter λογότυπο"></a>
-        <a href="/Exercise1/index.html"><img src="/assets/instagram_new.png" width="50" height="50"
+        <a href="index.html"><img src="../assets/instagram_new.png" width="50" height="50"
                 alt="Instagram λογότυπο"></a>
-        <a href="/Exercise1/index.html"><img src="/assets/youtube_logo.png" width="50" height="50"
+        <a href="index.html"><img src="../assets/youtube_logo.png" width="50" height="50"
                 alt="Youtube λογότυπο"></a>
         <h4>©2022 Techodata Computers</h4>
-        <a href="/Exercise1/index.html"><img src="/assets/Technodata-logos_cropped_footer.png" width="170" height="50"
+        <a href="index.html"><img src="../assets/Technodata-logos_cropped_footer.png" width="170" height="50"
                 alt="Tecnhodata λογότυπο"></a>
     </footer>
 
