--- a/Exercise1/products-pcs.html
+++ b/Exercise1/products-pcs.html
@@ -3,7 +3,7 @@
 
 <head>
     <title>Ηλεκτρονικοί Υπολογιστές | Technodata</title>
-    <link rel="icon" type="image/x-icon" href="/assets/logo.png">
+    <link rel="icon" type="image/x-icon" href="../assets/logo.png">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -12,16 +12,16 @@
 
 <body>
     <header class="header-light-color">
-        <a href="/Exercise1/index.html"><img src="/assets/Technodata-logos_black.png" width="700" height="160"
+        <a href="index.html"><img src="../assets/Technodata-logos_black.png" width="700" height="160"
                 alt="Technodata λογότυτπο"></a>
 
         <nav class="navigation">
-            <a href="/Exercise1/index.html">ΑΡΧΙΚΗ</a>
-            <a href="/Exercise1/product-categories.html#technology" class="active">ΠΡΟΙΟΝΤΑ ΚΑΙ ΤΕΧΝΟΛΟΓΙΑ</a>
-            <a href="/Exercise1/product-categories.html#spiti">ΓΙΑ ΤΟ ΣΠΙΤΙ</a>
-            <a href="/Exercise1/stores.html">ΚΑΤΑΣΤΗΜΑΤΑ</a>
-            <a href="/Exercise1/contact.html">ΕΠΙΚΟΙΝΩΝΙΑ</a>
-            <a href="/Exercise1/about_us.html">ΣΧΕΤΙΚΑ ΜΕ ΕΜΑΣ</a>
+            <a href="index.html">ΑΡΧΙΚΗ</a>
+            <a href="product-categories.html#technology" class="active">ΠΡΟΙΟΝΤΑ ΚΑΙ ΤΕΧΝΟΛΟΓΙΑ</a>
+            <a href="product-categories.html#spiti">ΓΙΑ ΤΟ ΣΠΙΤΙ</a>
+            <a href="stores.html">ΚΑΤΑΣΤΗΜΑΤΑ</a>
+            <a href="contact.html">ΕΠΙΚΟΙΝΩΝΙΑ</a>
+            <a href="about_us.html">ΣΧΕΤΙΚΑ ΜΕ ΕΜΑΣ</a>
         </nav>
     </header>
 
@@ -34,8 +34,8 @@
         <section id="products">
             <ul>
                 <li class="product-card">
-                    <a href="/Exercise1/products-pcs.html">
-                        <img src="/assets/pcs0.png" width="180" height="110" alt="">
+                    <a href="products-pcs.html">
+                        <img src="../assets/pcs0.png" width="180" height="110" alt="">
                         <h2>Apple MacBook Pro Ultrabook Space Gray</h2>
                     </a>
 
@@ -55,8 +55,8 @@
                 </li>
 
                 <li class="product-card">
-                    <a href="/Exercise1/products-pcs.html">
-                        <img src="/assets/pcs1.png" width="200" height="200" alt="">
+                    <a href="products-pcs.html">
+                        <img src="../assets/pcs1.png" width="200" height="200" alt="">
 
                         <h2>Huawei MateBook D15 Ultrabook</h2>
                     </a>
@@ -76,8 +76,8 @@
                 </li>
 
                 <li class="product-card">
-                    <a href="/Exercise1/products-pcs.html">
-                        <img src="/assets/pcs2.png" width="200" height="200" alt="">
+                    <a href="products-pcs.html">
+                        <img src="../assets/pcs2.png" width="200" height="200" alt="">
 
                         <h2>Apple iMac All-in-One PC Silver</h2>
                     </a>
@@ -99,8 +99,8 @@
                 </li>
 
                 <li class="product-card">
-                    <a href="/Exercise1/products-pcs.html">
-                        <img src="/assets/pcs3.png" width="200" height="200" alt="">
+                    <a href="products-pcs.html">
+                        <img src="../assets/pcs3.png" width="200" height="200" alt="">
 
                         <h2>MSI Intel Gaming Desktop PC</h2>
                     </a>
@@ -121,8 +121,8 @@
                 </li>
 
                 <li class="product-card">
-                    <a href="/Exercise1/products-pcs.html">
-                        <img src="/assets/pcs4.png" width="200" height="200" alt="">
+                    <a href="products-pcs.html">
+                        <img src="../assets/pcs4.png" width="200" height="200" alt="">
 
                         <h2>Apple Mac Mini PC</h2>
                     </a>
@@ -145,8 +145,8 @@
                 </li>
 
                 <li class="product-card">
-                    <a href="/Exercise1/products-pcs.html">
-                        <img src="/assets/pcs5.png" width="200" height="200" alt="">
+                    <a href="products-pcs.html">
+                        <img src="../assets/pcs5.png" width="200" height="200" alt="">
 
                         <h2>MSI Cubi N Mini PC</h2>
                     </a>
@@ -172,16 +172,16 @@
 
     <footer class="footer-content">
         <h4>Βρείτε μας στα ακόλουθα social media</h4>
-        <a href="/Exercise1/index.html"><img src="/assets/facebook_logo.png" width="50" height="50"
+        <a href="index.html"><img src="../assets/facebook_logo.png" width="50" height="50"
                 alt="Facebook λογότυπο"></a>
-        <a href="/Exercise1/index.html"><img src="/assets/twitter_logo.png" width="50" height="50"
+        <a href="index.html"><img src="../assets/twitter_logo.png" width="50" height="50"
                 alt="Twitter λογότυπο"></a>
-        <a href="/Exercise1/index.html"><img src="/assets/instagram_new.png" width="50" height="50"
+        <a href="index.html"><img src="../assets/instagram_new.png" width="50" height="50"
                 alt="Instagram λογότυπο"></a>
-        <a href="/Exercise1/index.html"><img src="/assets/youtube_logo.png" width="50" height="50"
+        <a href="index.html"><img src="../assets/youtube_logo.png" width="50" height="50"
                 alt="Youtube λογότυπο"></a>
         <h4>©2022 Techodata Computers</h4>
-        <a href="/Exercise1/index.html"><img src="/assets/Technodata-logos_cropped_footer.png" width="170" height="50"
+        <a href="index.html"><img src="../assets/Technodata-logos_cropped_footer.png" width="170" height="50"
                 alt="Tecnhodata λογότυπο"></a>
     </footer>
 </body>
