--- a/Exercise2/stores.html
+++ b/Exercise2/stores.html
@@ -3,17 +3,17 @@
 
 <head>
     <title>Καταστήματα | Technodata</title>
-    <link rel="icon" type="image/x-icon" href="/assets/logo.png">
+    <link rel="icon" type="image/x-icon" href="../assets/logo.png">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="author" content="co-authored by Anastasios Mpourtsouklis, Dimitrios Paraskeuiotis">
-    <link rel="stylesheet" href="/Exercise2/css/style.css">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
     <header class="header-light-color">
-        <a href="index.html"><img src="/assets/Technodata-logos_black.png" width="700" height="160"
+        <a href="index.html"><img src="../assets/Technodata-logos_black.png" width="700" height="160"
                 alt="Technodata λογότυτπο"></a>
 
         <nav class="navigation">
@@ -50,25 +50,25 @@
         <h4>Βρείτε μας στα ακόλουθα social media</h4>
 
         <a href="index.html">
-            <img src="/assets/facebook_logo.png" width="50" height="50" alt="Facebook λογότυπο">
+            <img src="../assets/facebook_logo.png" width="50" height="50" alt="Facebook λογότυπο">
         </a>
 
         <a href="index.html">
-            <img src="/assets/twitter_logo.png" width="50" height="50" alt="Twitter λογότυπο">
+            <img src="../assets/twitter_logo.png" width="50" height="50" alt="Twitter λογότυπο">
         </a>
 
         <a href="index.html">
-            <img src="/assets/instagram_new.png" width="50" height="50" alt="Instagram λογότυπο">
+            <img src="../assets/instagram_new.png" width="50" height="50" alt="Instagram λογότυπο">
         </a>
 
         <a href="index.html">
-            <img src="/assets/youtube_logo.png" width="50" height="50" alt="Youtube λογότυπο">
+            <img src="../assets/youtube_logo.png" width="50" height="50" alt="Youtube λογότυπο">
         </a>
 
         <h4>©2022 Techodata Computers</h4>
 
         <a href="index.html">
-            <img src="/assets/Technodata-logos_cropped_footer.png" width="170" height="50" alt="Tecnhodata λογότυπο">
+            <img src="../assets/Technodata-logos_cropped_footer.png" width="170" height="50" alt="Tecnhodata λογότυπο">
         </a>
     </footer>
 </body>
