--- a/Exercise3/product-categories.html
+++ b/Exercise3/product-categories.html
@@ -3,27 +3,27 @@
 
 <head>
     <title>Κατηγορίες Προϊόντων | TechnoData</title>
-    <link rel="icon" type="image/x-icon" href="/assets/logo.png">
+    <link rel="icon" type="image/x-icon" href="../assets/logo.png">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="author" content="co-authored by Anastasios Mpourtsouklis, Dimitrios Paraskeuiotis">
-    <link rel="stylesheet" href="/Exercise3/css/style.css">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
     <div class="grid-container">
         <div class="header-item">
             <header class="header-light-color">
-                <a href="/Exercise3/index.html"><img src="/assets/Technodata-logos_black.png" width="700" height="160"
+                <a href="index.html"><img src="../assets/Technodata-logos_black.png" width="700" height="160"
                         alt="Technodata λογότυτπο"></a>
 
                 <nav class="navigation">
-                    <a href="/Exercise3/index.html">ΑΡΧΙΚΗ</a>
-                    <a href="/Exercise3/product-categories.html" class="active">ΚΑΤΗΓΟΡΙΕΣ ΠΡΟΪΟΝΤΩΝ</a>
-                    <a href="/Exercise3/stores.html">ΚΑΤΑΣΤΗΜΑΤΑ</a>
-                    <a href="/Exercise3/contact.html">ΕΠΙΚΟΙΝΩΝΙΑ</a>
-                    <a href="/Exercise3/about_us.html">ΣΧΕΤΙΚΑ ΜΕ ΕΜΑΣ</a>
+                    <a href="index.html">ΑΡΧΙΚΗ</a>
+                    <a href="product-categories.html" class="active">ΚΑΤΗΓΟΡΙΕΣ ΠΡΟΪΟΝΤΩΝ</a>
+                    <a href="stores.html">ΚΑΤΑΣΤΗΜΑΤΑ</a>
+                    <a href="contact.html">ΕΠΙΚΟΙΝΩΝΙΑ</a>
+                    <a href="about_us.html">ΣΧΕΤΙΚΑ ΜΕ ΕΜΑΣ</a>
                 </nav>
             </header>
         </div>
@@ -37,8 +37,8 @@
 
                     <ul>
                         <li class="category-card">
-                            <a href="/Exercise3/products-phones.html">
-                                <img class="image" src="/assets/phones.png" width="200" height="200"
+                            <a href="products-phones.html">
+                                <img class="image" src="../assets/phones.png" width="200" height="200"
                                     alt="εικόνα κατηγορίας κινητών τηλεφώνων">
 
                                 <h3 class="category-name">Κινητή Τηλεφωνία</h3>
@@ -46,8 +46,8 @@
                         </li>
 
                         <li class="category-card">
-                            <a href="/Exercise3/product-categories.html">
-                                <img class="image" src="/assets/tablets.png" width="200" height="200"
+                            <a href="product-categories.html">
+                                <img class="image" src="../assets/tablets.png" width="200" height="200"
                                     alt="εικόνα κατηγορίας tablet">
 
                                 <h3 class="category-name">
@@ -57,8 +57,8 @@
                         </li>
 
                         <li class="category-card">
-                            <a href="/Exercise3/products-pcs.html">
-                                <img class="image" src="/assets/pcs.png" width="200" height="200"
+                            <a href="products-pcs.html">
+                                <img class="image" src="../assets/pcs.png" width="200" height="200"
                                     alt="εικόνα κατηγορίας ήχου">
 
 
@@ -69,8 +69,8 @@
                         </li>
 
                         <li class="category-card">
-                            <a href="/Exercise3/product-categories.html">
-                                <img class="image" src="/assets/tvs.png" width="200" height="200"
+                            <a href="product-categories.html">
+                                <img class="image" src="../assets/tvs.png" width="200" height="200"
                                     alt="εικόνα κατηγορίας εικόνας">
 
 
@@ -81,8 +81,8 @@
                         </li>
 
                         <li class="category-card">
-                            <a href="/Exercise3/product-categories.html">
-                                <img class="image" src="/assets/sound.png" width="200" height="200"
+                            <a href="product-categories.html">
+                                <img class="image" src="../assets/sound.png" width="200" height="200"
                                     alt="εικόνα κατηγορίας ήχου">
 
 
@@ -93,8 +93,8 @@
                         </li>
 
                         <li class="category-card">
-                            <a href="/Exercise3/product-categories.html">
-                                <img class="image" src="/assets/consoles.png" width="200" height="200"
+                            <a href="product-categories.html">
+                                <img class="image" src="../assets/consoles.png" width="200" height="200"
                                     alt="εικόνα κατηγορίας ήχου">
 
                                 <h3 class="category-name">
@@ -110,8 +110,8 @@
 
                     <ul>
                         <li class="category-card">
-                            <a href="/Exercise3/product-categories.html">
-                                <img class="image" src="/assets/fridges.png" width="200" height="200"
+                            <a href="product-categories.html">
+                                <img class="image" src="../assets/fridges.png" width="200" height="200"
                                     alt="εικόνα κατηγορίας ψυγείων">
 
                                 <h3 class="category-name">
@@ -121,8 +121,8 @@
                         </li>
 
                         <li class="category-card">
-                            <a href="/Exercise3/product-categories.html">
-                                <img class="image" src="/assets/ovens.png" width="200" height="200"
+                            <a href="product-categories.html">
+                                <img class="image" src="../assets/ovens.png" width="200" height="200"
                                     alt="εικόνα κατηγορίας κουζινών">
 
                                 <h3 class="category-name">
@@ -132,8 +132,8 @@
                         </li>
 
                         <li class="category-card">
-                            <a href="/Exercise3/product-categories.html">
-                                <img class="image" src="/assets/absorbers.png" width="200" height="200"
+                            <a href="product-categories.html">
+                                <img class="image" src="../assets/absorbers.png" width="200" height="200"
                                     alt="εικόνα κατηγορίας κουζινών">
 
                                 <h3 class="category-name">
@@ -143,8 +143,8 @@
                         </li>
 
                         <li class="category-card">
-                            <a href="/Exercise3/product-categories.html">
-                                <img class="image" src="/assets/dishwashers.png" width="200" height="200"
+                            <a href="product-categories.html">
+                                <img class="image" src="../assets/dishwashers.png" width="200" height="200"
                                     alt="εικόνα κατηγορίας πληντύριων πιάτων">
 
                                 <h3 class="category-name">
@@ -154,8 +154,8 @@
                         </li>
 
                         <li class="category-card">
-                            <a href="/Exercise3/product-categories.html">
-                                <img class="image" src="/assets/vacuums.png" width="200" height="200"
+                            <a href="product-categories.html">
+                                <img class="image" src="../assets/vacuums.png" width="200" height="200"
                                     alt="εικόνα κατηγορίας">
 
                                 <h3 class="category-name">
@@ -165,8 +165,8 @@
                         </li>
 
                         <li class="category-card">
-                            <a href="/Exercise3/product-categories.html">
-                                <img class="image" src="/assets/washing-machines.png" width="200" height="200"
+                            <a href="product-categories.html">
+                                <img class="image" src="../assets/washing-machines.png" width="200" height="200"
                                     alt="εικόνα κατηγορίας">
 
                                 <h3 class="category-name">
@@ -182,8 +182,8 @@
 
                     <ul>
                         <li class="category-card">
-                            <a href="/Exercise3/product-categories.html">
-                                <img class="image" src="/assets/gps.png" width="200" height="200"
+                            <a href="product-categories.html">
+                                <img class="image" src="../assets/gps.png" width="200" height="200"
                                     alt="εικόνα κατηγορίας ψυγείων">
 
                                 <h3 class="category-name">
@@ -193,8 +193,8 @@
                         </li>
 
                         <li class="category-card">
-                            <a href="/Exercise3/product-categories.html">
-                                <img class="image" src="/assets/alarms.png" width="200" height="200"
+                            <a href="product-categories.html">
+                                <img class="image" src="../assets/alarms.png" width="200" height="200"
                                     alt="εικόνα κατηγορίας κουζινών">
 
                                 <h3 class="category-name">
@@ -204,8 +204,8 @@
                         </li>
 
                         <li class="category-card">
-                            <a href="/Exercise3/product-categories.html">
-                                <img class="image" src="/assets/reverse-cameras.png" width="200" height="200"
+                            <a href="product-categories.html">
+                                <img class="image" src="../assets/reverse-cameras.png" width="200" height="200"
                                     alt="εικόνα κατηγορίας κουζινών">
 
                                 <h3 class="category-name">
@@ -215,8 +215,8 @@
                         </li>
 
                         <li class="category-card">
-                            <a href="/Exercise3/product-categories.html">
-                                <img class="image" src="/assets/parking-sensors.png" width="200" height="200"
+                            <a href="product-categories.html">
+                                <img class="image" src="../assets/parking-sensors.png" width="200" height="200"
                                     alt="εικόνα κατηγορίας πληντύριων πιάτων">
 
                                 <h3 class="category-name">
@@ -226,8 +226,8 @@
                         </li>
 
                         <li class="category-card">
-                            <a href="/Exercise3/product-categories.html">
-                                <img class="image" src="/assets/car-lighting.png" width="200" height="200"
+                            <a href="product-categories.html">
+                                <img class="image" src="../assets/car-lighting.png" width="200" height="200"
                                     alt="εικόνα κατηγορίας">
 
                                 <h3 class="category-name">
@@ -237,8 +237,8 @@
                         </li>
 
                         <li class="category-card">
-                            <a href="/Exercise3/product-categories.html">
-                                <img class="image" src="/assets/car-accessories.png" width="200" height="200"
+                            <a href="product-categories.html">
+                                <img class="image" src="../assets/car-accessories.png" width="200" height="200"
                                     alt="εικόνα κατηγορίας">
 
                                 <h3 class="category-name">
@@ -254,8 +254,8 @@
 
                     <ul>
                         <li class="product-card">
-                            <a href="/Exercise3/product-categories.html">
-                                <img class="image" src="/assets/popular0.png" width="200" height="200" alt="">
+                            <a href="product-categories.html">
+                                <img class="image" src="../assets/popular0.png" width="200" height="200" alt="">
                                 <h3>Κινητή Τηλεφωνία</h3>
                                 <p class="name">Apple iPhone 13 5G (4GB/128GB)</p>
                                 <p class="price">865,70€</p>
@@ -263,8 +263,8 @@
                         </li>
 
                         <li class="product-card">
-                            <a href="/Exercise3/product-categories.html">
-                                <img class="image" src="/assets/popular1.png" width="200" height="200" alt="">
+                            <a href="product-categories.html">
+                                <img class="image" src="../assets/popular1.png" width="200" height="200" alt="">
                                 <h3>Ηλεκτρονικοί Υπολογιστές</h3>
                                 <p class="name">Apple MacBook Air 13.3" (2020)</p>
                                 <p class="price">1.130,00€</p>
@@ -272,8 +272,8 @@
                         </li>
 
                         <li class="product-card">
-                            <a href="/Exercise3/product-categories.html">
-                                <img class="image" src="/assets/popular2.png" width="200" height="200" alt="">
+                            <a href="product-categories.html">
+                                <img class="image" src="../assets/popular2.png" width="200" height="200" alt="">
                                 <h3>Πληντύρια Ρούχων</h3>
                                 <p class="name">AEG LFR73964VG</p>
                                 <p class="price">849,00€</p>
@@ -281,8 +281,8 @@
                         </li>
 
                         <li class="product-card">
-                            <a href="/Exercise3/product-categories.html">
-                                <img class="image" src="/assets/popular3.png" width="200" height="200" alt="">
+                            <a href="product-categories.html">
+                                <img class="image" src="../assets/popular3.png" width="200" height="200" alt="">
                                 <h3>Αξεσουάρ Αυτοκινήτου</h3>
                                 <p class="name">Baseus 2xUSB 5A</p>
                                 <p class="price">7,98€</p>
@@ -290,8 +290,8 @@
                         </li>
 
                         <li class="product-card">
-                            <a href="/Exercise3/product-categories.html">
-                                <img class="image" src="/assets/popular4.png" width="200" height="200" alt="">
+                            <a href="product-categories.html">
+                                <img class="image" src="../assets/popular4.png" width="200" height="200" alt="">
                                 <h3>Ψυγεία</h3>
                                 <p class="name">Bosch KGN36NLEA</p>
                                 <p class="price">469,00€</p>
@@ -299,8 +299,8 @@
                         </li>
 
                         <li class="product-card">
-                            <a href="/Exercise3/product-categories.html">
-                                <img class="image" src="/assets/popular5.png" width="200" height="200" alt="">
+                            <a href="product-categories.html">
+                                <img class="image" src="../assets/popular5.png" width="200" height="200" alt="">
                                 <h3>Ηλεκτρονικοί Υπολογιστές</h3>
                                 <p class="name">Apple iMac 24" 2021</p>
                                 <p class="price">1.630,00€</p>
@@ -315,23 +315,23 @@
             <footer class="footer-content">
                 <h4>Βρείτε μας στα ακόλουθα social media</h4>
 
-                <a href="/Exercise3/index.html">
-                    <img src="/assets/facebook_logo.png" width="50" height="50" alt="Facebook λογότυπο">
+                <a href="index.html">
+                    <img src="../assets/facebook_logo.png" width="50" height="50" alt="Facebook λογότυπο">
                 </a>
-                <a href="/Exercise3/index.html">
-                    <img src="/assets/twitter_logo.png" width="50" height="50" alt="Twitter λογότυπο">
+                <a href="index.html">
+                    <img src="../assets/twitter_logo.png" width="50" height="50" alt="Twitter λογότυπο">
                 </a>
-                <a href="/Exercise3/index.html">
-                    <img src="/assets/instagram_new.png" width="50" height="50" alt="Instagram λογότυπο">
+                <a href="index.html">
+                    <img src="../assets/instagram_new.png" width="50" height="50" alt="Instagram λογότυπο">
                 </a>
-                <a href="/Exercise3/index.html">
-                    <img src="/assets/youtube_logo.png" width="50" height="50" alt="Youtube λογότυπο">
+                <a href="index.html">
+                    <img src="../assets/youtube_logo.png" width="50" height="50" alt="Youtube λογότυπο">
                 </a>
 
                 <h4>©2022 Techodata Computers</h4>
 
-                <a href="/Exercise3/index.html">
-                    <img src="/assets/Technodata-logos_cropped_footer.png" width="170" height="50"
+                <a href="index.html">
+                    <img src="../assets/Technodata-logos_cropped_footer.png" width="170" height="50"
                         alt="Tecnhodata λογότυπο">
                 </a>
             </footer>
