--- a/Exercise3/product-iphone14-pro-max.html
+++ b/Exercise3/product-iphone14-pro-max.html
@@ -3,28 +3,28 @@
 
 <head>
     <title>iPhone 14 Pro Max | Technodata</title>
-    <link rel="icon" type="image/x-icon" href="/assets/logo.png">
+    <link rel="icon" type="image/x-icon" href="../assets/logo.png">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="author" content="co-authored by Anastasios Mpourtsouklis, Dimitrios Paraskeuiotis">
-    <link rel="stylesheet" href="/Exercise3/css/style.css">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
     <div class="grid-container">
         <div class="header-item">
             <header class="header-light-color">
-                <a href="/Exercise3/index.html">
-                    <img src="/assets/Technodata-logos_black.png" width="700" height="160" alt="Technodata λογότυτπο">
+                <a href="index.html">
+                    <img src="../assets/Technodata-logos_black.png" width="700" height="160" alt="Technodata λογότυτπο">
                 </a>
 
                 <nav class="navigation">
-                    <a href="/Exercise3/index.html">ΑΡΧΙΚΗ</a>
-                    <a href="/Exercise3/product-categories.html">ΚΑΤΗΓΟΡΙΕΣ ΠΡΟΪΟΝΤΩΝ</a>
-                    <a href="/Exercise3/stores.html">ΚΑΤΑΣΤΗΜΑΤΑ</a>
-                    <a href="/Exercise3/contact.html">ΕΠΙΚΟΙΝΩΝΙΑ</a>
-                    <a href="/Exercise3/about_us.html">ΣΧΕΤΙΚΑ ΜΕ ΕΜΑΣ</a>
+                    <a href="index.html">ΑΡΧΙΚΗ</a>
+                    <a href="product-categories.html">ΚΑΤΗΓΟΡΙΕΣ ΠΡΟΪΟΝΤΩΝ</a>
+                    <a href="stores.html">ΚΑΤΑΣΤΗΜΑΤΑ</a>
+                    <a href="contact.html">ΕΠΙΚΟΙΝΩΝΙΑ</a>
+                    <a href="about_us.html">ΣΧΕΤΙΚΑ ΜΕ ΕΜΑΣ</a>
                 </nav>
             </header>
         </div>
@@ -33,11 +33,11 @@
             <main class="main-content">
                 <h2 id="iphone-name">Apple iPhone 14 Pro Max 128GB - Space Black Κινητό Smartphone</h2>
 
-                <h3 id="category"> <a href="/Exercise3/products-phones.html">Κινητό Τηλέφωνο</a></h3>
+                <h3 id="category"> <a href="products-phones.html">Κινητό Τηλέφωνο</a></h3>
 
 
                 <div class="iphone-code-price">
-                    <img src="/assets/iphone14pro.png" width="350" height="350" class="display-photo"
+                    <img src="../assets/iphone14pro.png" width="350" height="350" class="display-photo"
                         alt="Apple iPhone 14 Pro Max">
                     <div id="iphone-price">267271 <br> €1549.00</div>
                 </div>
@@ -47,7 +47,7 @@
                         <div class="manifacturer">
                             <h3>Κατασκευαστής</h3>
 
-                            <img src="/assets/apple_logo.png" width="100" height="100" alt="Apple λογότυπο">
+                            <img src="../assets/apple_logo.png" width="100" height="100" alt="Apple λογότυπο">
                         </div>
 
                         <div class="perigrafh">
@@ -76,7 +76,7 @@
 
 
 
-                <img src="/assets/analytiko.jpg" class="comparison"
+                <img src="../assets/analytiko.jpg" class="comparison"
                     alt="Διαφορές καινούριων μοντέλων και σύγκριση χαρακτηριστικών">
 
                 <section class="analytika-xarakthristika">
@@ -214,7 +214,7 @@
                 <section class="forma">
                     <h3>Δώστε μας μια βαθμολογία!</h3>
 
-                    <form action="/Exercise3/product-iphone14-pro-max.html" class="vathmologia-asteria">
+                    <form action="product-iphone14-pro-max.html" class="vathmologia-asteria">
                         <p>Βαθμολογήστε μας και αφήστε τα σχόλια σας απο κάτω!</p>
 
                         <input type="radio" id="1ast" name="vathmologia" class="epilogh" value="1 αστέρι">
@@ -246,26 +246,26 @@
             <footer class="footer-content">
                 <h4>Βρείτε μας στα ακόλουθα social media</h4>
 
-                <a href="/Exercise3/index.html">
-                    <img src="/assets/facebook_logo.png" width="50" height="50" alt="Facebook λογότυπο">
+                <a href="index.html">
+                    <img src="../assets/facebook_logo.png" width="50" height="50" alt="Facebook λογότυπο">
                 </a>
 
-                <a href="/Exercise3/index.html">
-                    <img src="/assets/twitter_logo.png" width="50" height="50" alt="Twitter λογότυπο">
+                <a href="index.html">
+                    <img src="../assets/twitter_logo.png" width="50" height="50" alt="Twitter λογότυπο">
                 </a>
 
-                <a href="/Exercise3/index.html">
-                    <img src="/assets/instagram_new.png" width="50" height="50" alt="Instagram λογότυπο">
+                <a href="index.html">
+                    <img src="../assets/instagram_new.png" width="50" height="50" alt="Instagram λογότυπο">
                 </a>
 
-                <a href="/Exercise3/index.html">
-                    <img src="/assets/youtube_logo.png" width="50" height="50" alt="Youtube λογότυπο">
+                <a href="index.html">
+                    <img src="../assets/youtube_logo.png" width="50" height="50" alt="Youtube λογότυπο">
                 </a>
 
                 <h4>©2022 Techodata Computers</h4>
 
-                <a href="/Exercise3/index.html">
-                    <img src="/assets/Technodata-logos_cropped_footer.png" width="170" height="50"
+                <a href="index.html">
+                    <img src="../assets/Technodata-logos_cropped_footer.png" width="170" height="50"
                         alt="Tecnhodata λογότυπο">
                 </a>
             </footer>
