--- a/Exercise3/products-pcs.html
+++ b/Exercise3/products-pcs.html
@@ -3,27 +3,27 @@
 
 <head>
     <title>Ηλεκτρονικοί Υπολογιστές | Technodata</title>
-    <link rel="icon" type="image/x-icon" href="/assets/logo.png">
+    <link rel="icon" type="image/x-icon" href="../assets/logo.png">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="author" content="co-authored by Anastasios Mpourtsouklis, Dimitrios Paraskeuiotis">
-    <link rel="stylesheet" href="/Exercise3/css/style.css">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
     <div class="grid-container">
         <div class="header-item">
             <header class="header-light-color">
-                <a href="/Exercise3/index.html"><img src="/assets/Technodata-logos_black.png" width="700" height="160"
+                <a href="index.html"><img src="../assets/Technodata-logos_black.png" width="700" height="160"
                         alt="Technodata λογότυτπο"></a>
 
                 <nav class="navigation">
-                    <a href="/Exercise3/index.html">ΑΡΧΙΚΗ</a>
-                    <a href="/Exercise3/product-categories.html" class="active">ΚΑΤΗΓΟΡΙΕΣ ΠΡΟΪΟΝΤΩΝ</a>
-                    <a href="/Exercise3/stores.html">ΚΑΤΑΣΤΗΜΑΤΑ</a>
-                    <a href="/Exercise3/contact.html">ΕΠΙΚΟΙΝΩΝΙΑ</a>
-                    <a href="/Exercise3/about_us.html">ΣΧΕΤΙΚΑ ΜΕ ΕΜΑΣ</a>
+                    <a href="index.html">ΑΡΧΙΚΗ</a>
+                    <a href="product-categories.html" class="active">ΚΑΤΗΓΟΡΙΕΣ ΠΡΟΪΟΝΤΩΝ</a>
+                    <a href="stores.html">ΚΑΤΑΣΤΗΜΑΤΑ</a>
+                    <a href="contact.html">ΕΠΙΚΟΙΝΩΝΙΑ</a>
+                    <a href="about_us.html">ΣΧΕΤΙΚΑ ΜΕ ΕΜΑΣ</a>
                 </nav>
             </header>
         </div>
@@ -39,7 +39,7 @@
                 <section class="products">
                     <div class="product-card">
                         <div class="product-details">
-                            <a href="/Exercise3/product-iphone14-pro-max.html">
+                            <a href="product-iphone14-pro-max.html">
                                 <h1>Apple MacBook Pro Ultrabook Space Gray</h1>
                             </a>
 
@@ -47,9 +47,9 @@
 
                             <p class="reviews">Αξιολογήσεις: 4,2/5 αστέρια (232)</p>
 
-                            <a href="/Exercise3/product-iphone14-pro-max.html" class="control"></a>
+                            <a href="product-iphone14-pro-max.html" class="control"></a>
                             <button class="button"
-                                onclick="window.location.href='/Exercise3/product-iphone14-pro-max.html'">
+                                onclick="window.location.href='product-iphone14-pro-max.html'">
                                 <span class="price">€4129.00</span>
 
                                 <span class="buy">Αγορά</span>
@@ -58,7 +58,7 @@
                         </div>
 
                         <div class="product-image">
-                            <img class="image" src="/assets/pcs0.png" alt="Apple MacBook Pro">
+                            <img class="image" src="../assets/pcs0.png" alt="Apple MacBook Pro">
 
                             <div class="info">
                                 <h2>Περιγραφή</h2>
@@ -77,7 +77,7 @@
 
                     <div class="product-card">
                         <div class="product-details">
-                            <a href="/Exercise3/product-iphone14-pro-max.html">
+                            <a href="product-iphone14-pro-max.html">
                                 <h1>Huawei MateBook D15 Ultrabook</h1>
                             </a>
 
@@ -85,9 +85,9 @@
 
                             <p class="reviews">Αξιολογήσεις: 4,7/5 αστέρια (212)</p>
 
-                            <a href="/Exercise3/product-iphone14-pro-max.html" class="control"></a>
+                            <a href="product-iphone14-pro-max.html" class="control"></a>
                             <button class="button"
-                                onclick="window.location.href='/Exercise3/product-iphone14-pro-max.html'">
+                                onclick="window.location.href='product-iphone14-pro-max.html'">
                                 <span class="price">€650.00</span>
 
                                 <span class="buy">Αγορά</span>
@@ -96,7 +96,7 @@
                         </div>
 
                         <div class="product-image">
-                            <img class="image" src="/assets/pcs1.png" alt="Huawei MateBook">
+                            <img class="image" src="../assets/pcs1.png" alt="Huawei MateBook">
 
                             <div class="info">
                                 <h2>Περιγραφή</h2>
@@ -115,7 +115,7 @@
 
                     <div class="product-card">
                         <div class="product-details">
-                            <a href="/Exercise3/product-iphone14-pro-max.html">
+                            <a href="product-iphone14-pro-max.html">
                                 <h1>Apple iMac All-in-One PC</h1>
                             </a>
 
@@ -123,9 +123,9 @@
 
                             <p class="reviews">Αξιολογήσεις: 4,8/5 αστέρια (82)</p>
 
-                            <a href="/Exercise3/product-iphone14-pro-max.html" class="control"></a>
+                            <a href="product-iphone14-pro-max.html" class="control"></a>
                             <button class="button"
-                                onclick="window.location.href='/Exercise3/product-iphone14-pro-max.html'">
+                                onclick="window.location.href='product-iphone14-pro-max.html'">
                                 <span class="price">€1598.89</span>
 
                                 <span class="buy">Αγορά</span>
@@ -134,7 +134,7 @@
                         </div>
 
                         <div class="product-image">
-                            <img class="image" src="/assets/pcs2.png" alt="Apple iMac">
+                            <img class="image" src="../assets/pcs2.png" alt="Apple iMac">
 
                             <div class="info">
                                 <h2>Περιγραφή</h2>
@@ -153,7 +153,7 @@
 
                     <div class="product-card">
                         <div class="product-details">
-                            <a href="/Exercise3/product-iphone14-pro-max.html">
+                            <a href="product-iphone14-pro-max.html">
                                 <h1>MSI Intel Gaming Desktop PC</h1>
                             </a>
 
@@ -161,9 +161,9 @@
 
                             <p class="reviews">Αξιολογήσεις: 3,6/5 αστέρια (168)</p>
 
-                            <a href="/Exercise3/product-iphone14-pro-max.html" class="control"></a>
+                            <a href="product-iphone14-pro-max.html" class="control"></a>
                             <button class="button"
-                                onclick="window.location.href='/Exercise3/product-iphone14-pro-max.html'">
+                                onclick="window.location.href='product-iphone14-pro-max.html'">
                                 <span class="price">€929.00</span>
 
                                 <span class="buy">Αγορά</span>
@@ -172,7 +172,7 @@
                         </div>
 
                         <div class="product-image">
-                            <img class="image" src="/assets/pcs3.png" alt="MSI Intel Prebuilt">
+                            <img class="image" src="../assets/pcs3.png" alt="MSI Intel Prebuilt">
 
                             <div class="info">
                                 <h2>Περιγραφή</h2>
@@ -191,7 +191,7 @@
 
                     <div class="product-card">
                         <div class="product-details">
-                            <a href="/Exercise3/product-iphone14-pro-max.html">
+                            <a href="product-iphone14-pro-max.html">
                                 <h1>Apple Mac Mini PC</h1>
                             </a>
 
@@ -199,9 +199,9 @@
 
                             <p class="reviews">Αξιολογήσεις: 4,0/5 αστέρια (357)</p>
 
-                            <a href="/Exercise3/product-iphone14-pro-max.html" class="control"></a>
+                            <a href="product-iphone14-pro-max.html" class="control"></a>
                             <button class="button"
-                                onclick="window.location.href='/Exercise3/product-iphone14-pro-max.html'">
+                                onclick="window.location.href='product-iphone14-pro-max.html'">
                                 <span class="price">€963.29</span>
 
                                 <span class="buy">Αγορά</span>
@@ -210,7 +210,7 @@
                         </div>
 
                         <div class="product-image">
-                            <img class="image" src="/assets/pcs4.png" alt="Apple Mac Mini">
+                            <img class="image" src="../assets/pcs4.png" alt="Apple Mac Mini">
 
                             <div class="info">
                                 <h2>Περιγραφή</h2>
@@ -229,7 +229,7 @@
 
                     <div class="product-card">
                         <div class="product-details">
-                            <a href="/Exercise3/product-iphone14-pro-max.html">
+                            <a href="product-iphone14-pro-max.html">
                                 <h1>MSI Cubi N Mini PC</h1>
                             </a>
 
@@ -237,9 +237,9 @@
 
                             <p class="reviews">Αξιολογήσεις: 3,5/5 αστέρια (60)</p>
 
-                            <a href="/Exercise3/product-iphone14-pro-max.html" class="control"></a>
+                            <a href="product-iphone14-pro-max.html" class="control"></a>
                             <button class="button"
-                                onclick="window.location.href='/Exercise3/product-iphone14-pro-max.html'">
+                                onclick="window.location.href='product-iphone14-pro-max.html'">
                                 <span class="price">€325.98</span>
 
                                 <span class="buy">Αγορά</span>
@@ -248,7 +248,7 @@
                         </div>
 
                         <div class="product-image">
-                            <img class="image" src="/assets/pcs5.png" alt="MSI Cubi N Mini">
+                            <img class="image" src="../assets/pcs5.png" alt="MSI Cubi N Mini">
 
                             <div class="info">
                                 <h2>Περιγραφή</h2>
@@ -273,26 +273,26 @@
             <footer class="footer-content">
                 <h4>Βρείτε μας στα ακόλουθα social media</h4>
 
-                <a href="/Exercise3/index.html">
-                    <img src="/assets/facebook_logo.png" width="50" height="50" alt="Facebook λογότυπο">
+                <a href="index.html">
+                    <img src="../assets/facebook_logo.png" width="50" height="50" alt="Facebook λογότυπο">
                 </a>
 
-                <a href="/Exercise3/index.html">
-                    <img src="/assets/twitter_logo.png" width="50" height="50" alt="Twitter λογότυπο">
+                <a href="index.html">
+                    <img src="../assets/twitter_logo.png" width="50" height="50" alt="Twitter λογότυπο">
                 </a>
 
-                <a href="/Exercise3/index.html">
-                    <img src="/assets/instagram_new.png" width="50" height="50" alt="Instagram λογότυπο">
+                <a href="index.html">
+                    <img src="../assets/instagram_new.png" width="50" height="50" alt="Instagram λογότυπο">
                 </a>
 
-                <a href="/Exercise3/index.html">
-                    <img src="/assets/youtube_logo.png" width="50" height="50" alt="Youtube λογότυπο">
+                <a href="index.html">
+                    <img src="../assets/youtube_logo.png" width="50" height="50" alt="Youtube λογότυπο">
                 </a>
 
                 <h4>©2022 Techodata Computers</h4>
 
-                <a href="/Exercise3/index.html">
-                    <img src="/assets/Technodata-logos_cropped_footer.png" width="170" height="50"
+                <a href="index.html">
+                    <img src="../assets/Technodata-logos_cropped_footer.png" width="170" height="50"
                         alt="Tecnhodata λογότυπο">
                 </a>
             </footer>
