--- a/Exercise4/product-categories.html
+++ b/Exercise4/product-categories.html
@@ -3,32 +3,32 @@
 
 <head>
     <title>Κατηγορίες Προϊόντων | TechnoData</title>
-    <link rel="icon" type="image/x-icon" href="/assets/logo.png">
+    <link rel="icon" type="image/x-icon" href="../assets/logo.png">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="author" content="co-authored by Anastasios Mpourtsouklis, Dimitrios Paraskeuiotis">
-    <link rel="stylesheet" href="/Exercise4/css/style.css">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
     <div class="grid-container">
         <div class="header-item">
             <header class="header-light-color">
-                <a href="/Exercise4/index.html">
-                    <img srcset="/assets/Technodata-logos_black_SR.png 600w,
-                        /assets/Technodata-logos_black_MR.png 768w,
-                        /assets/Technodata-logos_black_LR.png 1000w" sizes="(max-width: 600px) 80vw,
+                <a href="index.html">
+                    <img srcset="../assets/Technodata-logos_black_SR.png 600w,
+                        ../assets/Technodata-logos_black_MR.png 768w,
+                        ../assets/Technodata-logos_black_LR.png 1000w" sizes="(max-width: 600px) 80vw,
                             (max-width: 768px) 100vw,
-                            1000px" src="/assets/Technodata-logos_black_LR.png" alt="Technodata λογότυτπο">
+                            1000px" src="../assets/Technodata-logos_black_LR.png" alt="Technodata λογότυτπο">
                 </a>
 
                 <nav class="navigation">
-                    <a href="/Exercise4/index.html">ΑΡΧΙΚΗ</a>
-                    <a href="/Exercise4/product-categories.html" class="active">ΚΑΤΗΓΟΡΙΕΣ ΠΡΟΪΟΝΤΩΝ</a>
-                    <a href="/Exercise4/stores.html">ΚΑΤΑΣΤΗΜΑΤΑ</a>
-                    <a href="/Exercise4/contact.html">ΕΠΙΚΟΙΝΩΝΙΑ</a>
-                    <a href="/Exercise4/about_us.html">ΣΧΕΤΙΚΑ ΜΕ ΕΜΑΣ</a>
+                    <a href="index.html">ΑΡΧΙΚΗ</a>
+                    <a href="product-categories.html" class="active">ΚΑΤΗΓΟΡΙΕΣ ΠΡΟΪΟΝΤΩΝ</a>
+                    <a href="stores.html">ΚΑΤΑΣΤΗΜΑΤΑ</a>
+                    <a href="contact.html">ΕΠΙΚΟΙΝΩΝΙΑ</a>
+                    <a href="about_us.html">ΣΧΕΤΙΚΑ ΜΕ ΕΜΑΣ</a>
                 </nav>
             </header>
         </div>
@@ -42,8 +42,8 @@
 
                     <ul>
                         <li class="category-card">
-                            <a href="/Exercise4/products-phones.html">
-                                <img class="image" src="/assets/phones.png" width="200" height="200"
+                            <a href="products-phones.html">
+                                <img class="image" src="../assets/phones.png" width="200" height="200"
                                     alt="εικόνα κατηγορίας κινητών τηλεφώνων">
 
                                 <h3 class="category-name">Κινητή Τηλεφωνία</h3>
@@ -51,8 +51,8 @@
                         </li>
 
                         <li class="category-card">
-                            <a href="/Exercise4/product-categories.html">
-                                <img class="image" src="/assets/tablets.png" width="200" height="200"
+                            <a href="product-categories.html">
+                                <img class="image" src="../assets/tablets.png" width="200" height="200"
                                     alt="εικόνα κατηγορίας tablet">
 
                                 <h3 class="category-name">
@@ -62,8 +62,8 @@
                         </li>
 
                         <li class="category-card">
-                            <a href="/Exercise4/products-pcs.html">
-                                <img class="image" src="/assets/pcs.png" width="200" height="200"
+                            <a href="products-pcs.html">
+                                <img class="image" src="../assets/pcs.png" width="200" height="200"
                                     alt="εικόνα κατηγορίας ήχου">
 
 
@@ -74,8 +74,8 @@
                         </li>
 
                         <li class="category-card">
-                            <a href="/Exercise4/product-categories.html">
-                                <img class="image" src="/assets/tvs.png" width="200" height="200"
+                            <a href="product-categories.html">
+                                <img class="image" src="../assets/tvs.png" width="200" height="200"
                                     alt="εικόνα κατηγορίας εικόνας">
 
 
@@ -86,8 +86,8 @@
                         </li>
 
                         <li class="category-card">
-                            <a href="/Exercise4/product-categories.html">
-                                <img class="image" src="/assets/sound.png" width="200" height="200"
+                            <a href="product-categories.html">
+                                <img class="image" src="../assets/sound.png" width="200" height="200"
                                     alt="εικόνα κατηγορίας ήχου">
 
 
@@ -98,8 +98,8 @@
                         </li>
 
                         <li class="category-card">
-                            <a href="/Exercise4/product-categories.html">
-                                <img class="image" src="/assets/consoles.png" width="200" height="200"
+                            <a href="product-categories.html">
+                                <img class="image" src="../assets/consoles.png" width="200" height="200"
                                     alt="εικόνα κατηγορίας ήχου">
 
                                 <h3 class="category-name">
@@ -115,8 +115,8 @@
 
                     <ul>
                         <li class="category-card">
-                            <a href="/Exercise4/product-categories.html">
-                                <img class="image" src="/assets/fridges.png" width="200" height="200"
+                            <a href="product-categories.html">
+                                <img class="image" src="../assets/fridges.png" width="200" height="200"
                                     alt="εικόνα κατηγορίας ψυγείων">
 
                                 <h3 class="category-name">
@@ -126,8 +126,8 @@
                         </li>
 
                         <li class="category-card">
-                            <a href="/Exercise4/product-categories.html">
-                                <img class="image" src="/assets/ovens.png" width="200" height="200"
+                            <a href="product-categories.html">
+                                <img class="image" src="../assets/ovens.png" width="200" height="200"
                                     alt="εικόνα κατηγορίας κουζινών">
 
                                 <h3 class="category-name">
@@ -137,8 +137,8 @@
                         </li>
 
                         <li class="category-card">
-                            <a href="/Exercise4/product-categories.html">
-                                <img class="image" src="/assets/absorbers.png" width="200" height="200"
+                            <a href="product-categories.html">
+                                <img class="image" src="../assets/absorbers.png" width="200" height="200"
                                     alt="εικόνα κατηγορίας κουζινών">
 
                                 <h3 class="category-name">
@@ -148,8 +148,8 @@
                         </li>
 
                         <li class="category-card">
-                            <a href="/Exercise4/product-categories.html">
-                                <img class="image" src="/assets/dishwashers.png" width="200" height="200"
+                            <a href="product-categories.html">
+                                <img class="image" src="../assets/dishwashers.png" width="200" height="200"
                                     alt="εικόνα κατηγορίας πληντύριων πιάτων">
 
                                 <h3 class="category-name">
@@ -159,8 +159,8 @@
                         </li>
 
                         <li class="category-card">
-                            <a href="/Exercise4/product-categories.html">
-                                <img class="image" src="/assets/vacuums.png" width="200" height="200"
+                            <a href="product-categories.html">
+                                <img class="image" src="../assets/vacuums.png" width="200" height="200"
                                     alt="εικόνα κατηγορίας">
 
                                 <h3 class="category-name">
@@ -170,8 +170,8 @@
                         </li>
 
                         <li class="category-card">
-                            <a href="/Exercise4/product-categories.html">
-                                <img class="image" src="/assets/washing-machines.png" width="200" height="200"
+                            <a href="product-categories.html">
+                                <img class="image" src="../assets/washing-machines.png" width="200" height="200"
                                     alt="εικόνα κατηγορίας">
 
                                 <h3 class="category-name">
@@ -187,8 +187,8 @@
 
                     <ul>
                         <li class="category-card">
-                            <a href="/Exercise4/product-categories.html">
-                                <img class="image" src="/assets/gps.png" width="200" height="200"
+                            <a href="product-categories.html">
+                                <img class="image" src="../assets/gps.png" width="200" height="200"
                                     alt="εικόνα κατηγορίας ψυγείων">
 
                                 <h3 class="category-name">
@@ -198,8 +198,8 @@
                         </li>
 
                         <li class="category-card">
-                            <a href="/Exercise4/product-categories.html">
-                                <img class="image" src="/assets/alarms.png" width="200" height="200"
+                            <a href="product-categories.html">
+                                <img class="image" src="../assets/alarms.png" width="200" height="200"
                                     alt="εικόνα κατηγορίας κουζινών">
 
                                 <h3 class="category-name">
@@ -209,8 +209,8 @@
                         </li>
 
                         <li class="category-card">
-                            <a href="/Exercise4/product-categories.html">
-                                <img class="image" src="/assets/reverse-cameras.png" width="200" height="200"
+                            <a href="product-categories.html">
+                                <img class="image" src="../assets/reverse-cameras.png" width="200" height="200"
                                     alt="εικόνα κατηγορίας κουζινών">
 
                                 <h3 class="category-name">
@@ -220,8 +220,8 @@
                         </li>
 
                         <li class="category-card">
-                            <a href="/Exercise4/product-categories.html">
-                                <img class="image" src="/assets/parking-sensors.png" width="200" height="200"
+                            <a href="product-categories.html">
+                                <img class="image" src="../assets/parking-sensors.png" width="200" height="200"
                                     alt="εικόνα κατηγορίας πληντύριων πιάτων">
 
                                 <h3 class="category-name">
@@ -231,8 +231,8 @@
                         </li>
 
                         <li class="category-card">
-                            <a href="/Exercise4/product-categories.html">
-                                <img class="image" src="/assets/car-lighting.png" width="200" height="200"
+                            <a href="product-categories.html">
+                                <img class="image" src="../assets/car-lighting.png" width="200" height="200"
                                     alt="εικόνα κατηγορίας">
 
                                 <h3 class="category-name">
@@ -242,8 +242,8 @@
                         </li>
 
                         <li class="category-card">
-                            <a href="/Exercise4/product-categories.html">
-                                <img class="image" src="/assets/car-accessories.png" width="200" height="200"
+                            <a href="product-categories.html">
+                                <img class="image" src="../assets/car-accessories.png" width="200" height="200"
                                     alt="εικόνα κατηγορίας">
 
                                 <h3 class="category-name">
@@ -259,8 +259,8 @@
 
                     <ul>
                         <li class="product-card">
-                            <a href="/Exercise4/product-categories.html">
-                                <img class="image" src="/assets/popular0.png" width="200" height="200" alt="">
+                            <a href="product-categories.html">
+                                <img class="image" src="../assets/popular0.png" width="200" height="200" alt="">
                                 <h3>Κινητή Τηλεφωνία</h3>
                                 <p class="name">Apple iPhone 13 5G (4GB/128GB)</p>
                                 <p class="price">865,70€</p>
@@ -268,8 +268,8 @@
                         </li>
 
                         <li class="product-card">
-                            <a href="/Exercise4/product-categories.html">
-                                <img class="image" src="/assets/popular1.png" width="200" height="200" alt="">
+                            <a href="product-categories.html">
+                                <img class="image" src="../assets/popular1.png" width="200" height="200" alt="">
                                 <h3>Ηλεκτρονικοί Υπολογιστές</h3>
                                 <p class="name">Apple MacBook Air 13.3" (2020)</p>
                                 <p class="price">1.130,00€</p>
@@ -277,8 +277,8 @@
                         </li>
 
                         <li class="product-card">
-                            <a href="/Exercise4/product-categories.html">
-                                <img class="image" src="/assets/popular2.png" width="200" height="200" alt="">
+                            <a href="product-categories.html">
+                                <img class="image" src="../assets/popular2.png" width="200" height="200" alt="">
                                 <h3>Πληντύρια Ρούχων</h3>
                                 <p class="name">AEG LFR73964VG</p>
                                 <p class="price">849,00€</p>
@@ -286,8 +286,8 @@
                         </li>
 
                         <li class="product-card">
-                            <a href="/Exercise4/product-categories.html">
-                                <img class="image" src="/assets/popular3.png" width="200" height="200" alt="">
+                            <a href="product-categories.html">
+                                <img class="image" src="../assets/popular3.png" width="200" height="200" alt="">
                                 <h3>Αξεσουάρ Αυτοκινήτου</h3>
                                 <p class="name">Baseus 2xUSB 5A</p>
                                 <p class="price">7,98€</p>
@@ -295,8 +295,8 @@
                         </li>
 
                         <li class="product-card">
-                            <a href="/Exercise4/product-categories.html">
-                                <img class="image" src="/assets/popular4.png" width="200" height="200" alt="">
+                            <a href="product-categories.html">
+                                <img class="image" src="../assets/popular4.png" width="200" height="200" alt="">
                                 <h3>Ψυγεία</h3>
                                 <p class="name">Bosch KGN36NLEA</p>
                                 <p class="price">469,00€</p>
@@ -304,8 +304,8 @@
                         </li>
 
                         <li class="product-card">
-                            <a href="/Exercise4/product-categories.html">
-                                <img class="image" src="/assets/popular5.png" width="200" height="200" alt="">
+                            <a href="product-categories.html">
+                                <img class="image" src="../assets/popular5.png" width="200" height="200" alt="">
                                 <h3>Ηλεκτρονικοί Υπολογιστές</h3>
                                 <p class="name">Apple iMac 24" 2021</p>
                                 <p class="price">1.630,00€</p>
@@ -320,23 +320,23 @@
             <footer class="footer-content">
                 <h4>Βρείτε μας στα ακόλουθα social media</h4>
 
-                <a href="/Exercise4/index.html">
-                    <img src="/assets/facebook_logo.png" width="50" height="50" alt="Facebook λογότυπο">
+                <a href="index.html">
+                    <img src="../assets/facebook_logo.png" width="50" height="50" alt="Facebook λογότυπο">
                 </a>
-                <a href="/Exercise4/index.html">
-                    <img src="/assets/twitter_logo.png" width="50" height="50" alt="Twitter λογότυπο">
+                <a href="index.html">
+                    <img src="../assets/twitter_logo.png" width="50" height="50" alt="Twitter λογότυπο">
                 </a>
-                <a href="/Exercise4/index.html">
-                    <img src="/assets/instagram_new.png" width="50" height="50" alt="Instagram λογότυπο">
+                <a href="index.html">
+                    <img src="../assets/instagram_new.png" width="50" height="50" alt="Instagram λογότυπο">
                 </a>
-                <a href="/Exercise4/index.html">
-                    <img src="/assets/youtube_logo.png" width="50" height="50" alt="Youtube λογότυπο">
+                <a href="index.html">
+                    <img src="../assets/youtube_logo.png" width="50" height="50" alt="Youtube λογότυπο">
                 </a>
 
                 <h4>©2022 Techodata Computers</h4>
 
-                <a href="/Exercise4/index.html">
-                    <img src="/assets/Technodata-logos_cropped_footer.png" width="170" height="50"
+                <a href="index.html">
+                    <img src="../assets/Technodata-logos_cropped_footer.png" width="170" height="50"
                         alt="Tecnhodata λογότυπο">
                 </a>
             </footer>
