--- a/Exercise5/product-iphone14-pro-max.html
+++ b/Exercise5/product-iphone14-pro-max.html
@@ -3,35 +3,35 @@
 
 <head>
     <title>iPhone 14 Pro Max | Technodata</title>
-    <link rel="icon" type="image/x-icon" href="/assets/logo.png">
+    <link rel="icon" type="image/x-icon" href="../assets/logo.png">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="author" content="co-authored by Anastasios Mpourtsouklis, Dimitrios Paraskeuiotis">
-    <link rel="stylesheet" href="/Exercise5/css/style.css">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
     <div class="grid-container">
         <div class="header-item">
             <header class="header-light-color">
-                <a href="/Exercise5/index.html">
-                    <img srcset="/assets/Technodata-logos_black_SR.png 600w,
-                        /assets/Technodata-logos_black_MR.png 768w,
-                        /assets/Technodata-logos_black_LR.png 1000w" sizes="(max-width: 600px) 80vw,
+                <a href="index.html">
+                    <img srcset="../assets/Technodata-logos_black_SR.png 600w,
+                        ../assets/Technodata-logos_black_MR.png 768w,
+                        ../assets/Technodata-logos_black_LR.png 1000w" sizes="(max-width: 600px) 80vw,
                             (max-width: 768px) 100vw,
-                            1000px" src="/assets/Technodata-logos_black_LR.png" alt="Technodata λογότυτπο">
+                            1000px" src="../assets/Technodata-logos_black_LR.png" alt="Technodata λογότυτπο">
                 </a>
 
                 <nav class="navigation">
-                    <a href="/Exercise5/index.html">ΑΡΧΙΚΗ</a>
-                    <a href="/Exercise5/product-categories.html">ΚΑΤΗΓΟΡΙΕΣ ΠΡΟΪΟΝΤΩΝ</a>
-                    <a href="/Exercise5/stores.html">ΚΑΤΑΣΤΗΜΑΤΑ</a>
-                    <a href="/Exercise5/contact.html">ΕΠΙΚΟΙΝΩΝΙΑ</a>
-                    <a href="/Exercise5/about_us.html">ΣΧΕΤΙΚΑ ΜΕ ΕΜΑΣ</a>
+                    <a href="index.html">ΑΡΧΙΚΗ</a>
+                    <a href="product-categories.html">ΚΑΤΗΓΟΡΙΕΣ ΠΡΟΪΟΝΤΩΝ</a>
+                    <a href="stores.html">ΚΑΤΑΣΤΗΜΑΤΑ</a>
+                    <a href="contact.html">ΕΠΙΚΟΙΝΩΝΙΑ</a>
+                    <a href="about_us.html">ΣΧΕΤΙΚΑ ΜΕ ΕΜΑΣ</a>
                     <div id="navigationRight">
-                        <a href="/Exercise5/sign_up.html">ΣΥΝΔΕΣΗ</a>
-                        <a href="/Exercise5/sign_up.html">ΕΓΓΡΑΦΗ</a>
+                        <a href="sign_up.html">ΣΥΝΔΕΣΗ</a>
+                        <a href="sign_up.html">ΕΓΓΡΑΦΗ</a>
                     </div>
                 </nav>
             </header>
@@ -41,14 +41,14 @@
             <main class="main-content">
                 <h2 id="iphone-name">Apple iPhone 14 Pro Max 128GB - Space Black Κινητό Smartphone</h2>
 
-                <h3 id="category"> <a href="/Exercise5/products-phones.html">Κινητό Τηλέφωνο</a></h3>
+                <h3 id="category"> <a href="products-phones.html">Κινητό Τηλέφωνο</a></h3>
 
 
                 <div class="iphone-code-price">
 
-                    <img srcset="/assets/iphone14pro_SR2.png 600w,
-                            /assets/iphone14pro.png 1000w" sizes="(max-width: 820px) 300px,
-                                 350px" src="/assets/iphone14pro.png" class="display-photo"
+                    <img srcset="../assets/iphone14pro_SR2.png 600w,
+                            ../assets/iphone14pro.png 1000w" sizes="(max-width: 820px) 300px,
+                                 350px" src="../assets/iphone14pro.png" class="display-photo"
                         alt="Apple iPhone 14 Pro Max">
                     <div id="iphone-price">267271 <br> €1549.00</div>
 
@@ -58,9 +58,9 @@
                         <div class="manifacturer">
                             <h3>Κατασκευαστής</h3>
 
-                            <img srcset="/assets/apple_logo_SR.png 600w,
-                                        /assets/apple_logo_MR.png 1000w" sizes="(max-width: 820px) 8vw,
-                                        100px" src="/assets/apple_logo.png" alt="Apple λογότυπο">
+                            <img srcset="../assets/apple_logo_SR.png 600w,
+                                        ../assets/apple_logo_MR.png 1000w" sizes="(max-width: 820px) 8vw,
+                                        100px" src="../assets/apple_logo.png" alt="Apple λογότυπο">
                         </div>
 
                         <div class="perigrafh">
@@ -87,11 +87,11 @@
                     </div>
                 </section>
 
-                <img srcset="/assets/analytiko_SR2.jpg 600w,
-                            /assets/analytiko_MR.jpg 768w,
-                            /assets/analytiko.jpg 1000w" sizes="(max-width: 820px) 70vw,
+                <img srcset="../assets/analytiko_SR2.jpg 600w,
+                            ../assets/analytiko_MR.jpg 768w,
+                            ../assets/analytiko.jpg 1000w" sizes="(max-width: 820px) 70vw,
                             (max-width: 1180px) 70vw,
-                            1000px" src="/assets/analytiko.jpg" class="comparison"
+                            1000px" src="../assets/analytiko.jpg" class="comparison"
                     alt="Διαφορές καινούριων μοντέλων και σύγκριση χαρακτηριστικών">
 
 
@@ -230,7 +230,7 @@
                 <section class="forma">
                     <h3>Δώστε μας μια βαθμολογία!</h3>
 
-                    <form action="/Exercise5/product-iphone14-pro-max.html" class="vathmologia-asteria">
+                    <form action="product-iphone14-pro-max.html" class="vathmologia-asteria">
                         <p>Βαθμολογήστε μας και αφήστε τα σχόλια σας απο κάτω!</p>
 
                         <input type="radio" id="1ast" name="vathmologia" class="epilogh" value="1 αστέρι">
@@ -263,26 +263,26 @@
             <footer class="footer-content">
                 <h4>Βρείτε μας στα ακόλουθα social media</h4>
 
-                <a href="/Exercise5/index.html">
-                    <img src="/assets/facebook_logo.png" width="50" height="50" alt="Facebook λογότυπο">
+                <a href="index.html">
+                    <img src="../assets/facebook_logo.png" width="50" height="50" alt="Facebook λογότυπο">
                 </a>
 
-                <a href="/Exercise5/index.html">
-                    <img src="/assets/twitter_logo.png" width="50" height="50" alt="Twitter λογότυπο">
+                <a href="index.html">
+                    <img src="../assets/twitter_logo.png" width="50" height="50" alt="Twitter λογότυπο">
                 </a>
 
-                <a href="/Exercise5/index.html">
-                    <img src="/assets/instagram_new.png" width="50" height="50" alt="Instagram λογότυπο">
+                <a href="index.html">
+                    <img src="../assets/instagram_new.png" width="50" height="50" alt="Instagram λογότυπο">
                 </a>
 
-                <a href="/Exercise5/index.html">
-                    <img src="/assets/youtube_logo.png" width="50" height="50" alt="Youtube λογότυπο">
+                <a href="index.html">
+                    <img src="../assets/youtube_logo.png" width="50" height="50" alt="Youtube λογότυπο">
                 </a>
 
                 <h4>©2022 Techodata Computers</h4>
 
-                <a href="/Exercise5/index.html">
-                    <img src="/assets/Technodata-logos_cropped_footer.png" width="170" height="50"
+                <a href="index.html">
+                    <img src="../assets/Technodata-logos_cropped_footer.png" width="170" height="50"
                         alt="Tecnhodata λογότυπο">
                 </a>
             </footer>
