--- a/Exercise5/products-pcs.html
+++ b/Exercise5/products-pcs.html
@@ -3,35 +3,35 @@
 
 <head>
     <title>Ηλεκτρονικοί Υπολογιστές | Technodata</title>
-    <link rel="icon" type="image/x-icon" href="/assets/logo.png">
+    <link rel="icon" type="image/x-icon" href="../assets/logo.png">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="author" content="co-authored by Anastasios Mpourtsouklis, Dimitrios Paraskeuiotis">
-    <link rel="stylesheet" href="/Exercise5/css/style.css">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
     <div class="grid-container">
         <div class="header-item">
             <header class="header-light-color">
-                <a href="/Exercise5/index.html">
-                    <img srcset="/assets/Technodata-logos_black_SR.png 600w,
-                        /assets/Technodata-logos_black_MR.png 768w,
-                        /assets/Technodata-logos_black_LR.png 1000w" sizes="(max-width: 600px) 80vw,
+                <a href="index.html">
+                    <img srcset="../assets/Technodata-logos_black_SR.png 600w,
+                        ../assets/Technodata-logos_black_MR.png 768w,
+                        ../assets/Technodata-logos_black_LR.png 1000w" sizes="(max-width: 600px) 80vw,
                             (max-width: 768px) 100vw,
-                            1000px" src="/assets/Technodata-logos_black_LR.png" alt="Technodata λογότυτπο">
+                            1000px" src="../assets/Technodata-logos_black_LR.png" alt="Technodata λογότυτπο">
                 </a>
 
                 <nav class="navigation">
-                    <a href="/Exercise5/index.html">ΑΡΧΙΚΗ</a>
-                    <a href="/Exercise5/product-categories.html" class="active">ΚΑΤΗΓΟΡΙΕΣ ΠΡΟΪΟΝΤΩΝ</a>
-                    <a href="/Exercise5/stores.html">ΚΑΤΑΣΤΗΜΑΤΑ</a>
-                    <a href="/Exercise5/contact.html">ΕΠΙΚΟΙΝΩΝΙΑ</a>
-                    <a href="/Exercise5/about_us.html">ΣΧΕΤΙΚΑ ΜΕ ΕΜΑΣ</a>
+                    <a href="index.html">ΑΡΧΙΚΗ</a>
+                    <a href="product-categories.html" class="active">ΚΑΤΗΓΟΡΙΕΣ ΠΡΟΪΟΝΤΩΝ</a>
+                    <a href="stores.html">ΚΑΤΑΣΤΗΜΑΤΑ</a>
+                    <a href="contact.html">ΕΠΙΚΟΙΝΩΝΙΑ</a>
+                    <a href="about_us.html">ΣΧΕΤΙΚΑ ΜΕ ΕΜΑΣ</a>
                     <div id="navigationRight">
-                        <a href="/Exercise5/sign_up.html">ΣΥΝΔΕΣΗ</a>
-                        <a href="/Exercise5/sign_up.html">ΕΓΓΡΑΦΗ</a>
+                        <a href="sign_up.html">ΣΥΝΔΕΣΗ</a>
+                        <a href="sign_up.html">ΕΓΓΡΑΦΗ</a>
                     </div>
                 </nav>
             </header>
@@ -48,7 +48,7 @@
                 <section class="products">
                     <div class="product-card">
                         <div class="product-details">
-                            <a href="/Exercise5/product-iphone14-pro-max.html">
+                            <a href="product-iphone14-pro-max.html">
                                 <h1>Apple MacBook Pro Ultrabook Space Gray</h1>
                             </a>
 
@@ -56,9 +56,9 @@
 
                             <p class="reviews">Αξιολογήσεις: 4,2/5 αστέρια (232)</p>
 
-                            <a href="/Exercise5/product-iphone14-pro-max.html" class="control"></a>
+                            <a href="product-iphone14-pro-max.html" class="control"></a>
                             <button class="button"
-                                onclick="window.location.href='/Exercise5/product-iphone14-pro-max.html'">
+                                onclick="window.location.href='product-iphone14-pro-max.html'">
                                 <span class="price">€4129.00</span>
                                 <span class="buy">Αγορά</span>
                             </button>
@@ -66,7 +66,7 @@
                         </div>
 
                         <div class="product-image">
-                            <img class="image" src="/assets/pcs0.png" alt="Apple MacBook Pro">
+                            <img class="image" src="../assets/pcs0.png" alt="Apple MacBook Pro">
 
                             <div class="info">
                                 <h2>Περιγραφή</h2>
@@ -85,7 +85,7 @@
 
                     <div class="product-card">
                         <div class="product-details">
-                            <a href="/Exercise5/product-iphone14-pro-max.html">
+                            <a href="product-iphone14-pro-max.html">
                                 <h1>Huawei MateBook D15 Ultrabook</h1>
                             </a>
 
@@ -93,9 +93,9 @@
 
                             <p class="reviews">Αξιολογήσεις: 4,7/5 αστέρια (212)</p>
 
-                            <a href="/Exercise5/product-iphone14-pro-max.html" class="control"></a>
+                            <a href="product-iphone14-pro-max.html" class="control"></a>
                             <button class="button"
-                                onclick="window.location.href='/Exercise5/product-iphone14-pro-max.html'">
+                                onclick="window.location.href='product-iphone14-pro-max.html'">
                                 <span class="price">€650.00</span>
                                 <span class="buy">Αγορά</span>
                             </button>
@@ -103,7 +103,7 @@
                         </div>
 
                         <div class="product-image">
-                            <img class="image" src="/assets/pcs1.png" alt="Huawei MateBook">
+                            <img class="image" src="../assets/pcs1.png" alt="Huawei MateBook">
 
                             <div class="info">
                                 <h2>Περιγραφή</h2>
@@ -122,7 +122,7 @@
 
                     <div class="product-card">
                         <div class="product-details">
-                            <a href="/Exercise5/product-iphone14-pro-max.html">
+                            <a href="product-iphone14-pro-max.html">
                                 <h1>Apple iMac All-in-One PC</h1>
                             </a>
 
@@ -130,9 +130,9 @@
 
                             <p class="reviews">Αξιολογήσεις: 4,8/5 αστέρια (82)</p>
 
-                            <a href="/Exercise5/product-iphone14-pro-max.html" class="control"></a>
+                            <a href="product-iphone14-pro-max.html" class="control"></a>
                             <button class="button"
-                                onclick="window.location.href='/Exercise5/product-iphone14-pro-max.html'">
+                                onclick="window.location.href='product-iphone14-pro-max.html'">
                                 <span class="price">€1598.89</span>
                                 <span class="buy">Αγορά</span>
                             </button>
@@ -140,7 +140,7 @@
                         </div>
 
                         <div class="product-image">
-                            <img class="image" src="/assets/pcs2.png" alt="Apple iMac">
+                            <img class="image" src="../assets/pcs2.png" alt="Apple iMac">
 
                             <div class="info">
                                 <h2>Περιγραφή</h2>
@@ -159,7 +159,7 @@
 
                     <div class="product-card">
                         <div class="product-details">
-                            <a href="/Exercise5/product-iphone14-pro-max.html">
+                            <a href="product-iphone14-pro-max.html">
                                 <h1>MSI Intel Gaming Desktop PC</h1>
                             </a>
 
@@ -167,9 +167,9 @@
 
                             <p class="reviews">Αξιολογήσεις: 3,6/5 αστέρια (168)</p>
 
-                            <a href="/Exercise5/product-iphone14-pro-max.html" class="control"></a>
+                            <a href="product-iphone14-pro-max.html" class="control"></a>
                             <button class="button"
-                                onclick="window.location.href='/Exercise5/product-iphone14-pro-max.html'">
+                                onclick="window.location.href='product-iphone14-pro-max.html'">
                                 <span class="price">€929.00</span>
                                 <span class="buy">Αγορά</span>
                             </button>
@@ -177,7 +177,7 @@
                         </div>
 
                         <div class="product-image">
-                            <img class="image" src="/assets/pcs3.png" alt="MSI Intel Prebuilt">
+                            <img class="image" src="../assets/pcs3.png" alt="MSI Intel Prebuilt">
 
                             <div class="info">
                                 <h2>Περιγραφή</h2>
@@ -196,7 +196,7 @@
 
                     <div class="product-card">
                         <div class="product-details">
-                            <a href="/Exercise5/product-iphone14-pro-max.html">
+                            <a href="product-iphone14-pro-max.html">
                                 <h1>Apple Mac Mini PC</h1>
                             </a>
 
@@ -204,9 +204,9 @@
 
                             <p class="reviews">Αξιολογήσεις: 4,0/5 αστέρια (357)</p>
 
-                            <a href="/Exercise5/product-iphone14-pro-max.html" class="control"></a>
+                            <a href="product-iphone14-pro-max.html" class="control"></a>
                             <button class="button"
-                                onclick="window.location.href='/Exercise5/product-iphone14-pro-max.html'">
+                                onclick="window.location.href='product-iphone14-pro-max.html'">
                                 <span class="price">€963.29</span>
                                 <span class="buy">Αγορά</span>
                             </button>
@@ -214,7 +214,7 @@
                         </div>
 
                         <div class="product-image">
-                            <img class="image" src="/assets/pcs4.png" alt="Apple Mac Mini">
+                            <img class="image" src="../assets/pcs4.png" alt="Apple Mac Mini">
 
                             <div class="info">
                                 <h2>Περιγραφή</h2>
@@ -233,7 +233,7 @@
 
                     <div class="product-card">
                         <div class="product-details">
-                            <a href="/Exercise5/product-iphone14-pro-max.html">
+                            <a href="product-iphone14-pro-max.html">
                                 <h1>MSI Cubi N Mini PC</h1>
                             </a>
 
@@ -241,9 +241,9 @@
 
                             <p class="reviews">Αξιολογήσεις: 3,5/5 αστέρια (60)</p>
 
-                            <a href="/Exercise5/product-iphone14-pro-max.html" class="control"></a>
+                            <a href="product-iphone14-pro-max.html" class="control"></a>
                             <button class="button"
-                                onclick="window.location.href='/Exercise5/product-iphone14-pro-max.html'">
+                                onclick="window.location.href='product-iphone14-pro-max.html'">
                                 <span class="price">€325.98</span>
                                 <span class="buy">Αγορά</span>
                             </button>
@@ -251,7 +251,7 @@
                         </div>
 
                         <div class="product-image">
-                            <img class="image" src="/assets/pcs5.png" alt="MSI Cubi N Mini">
+                            <img class="image" src="../assets/pcs5.png" alt="MSI Cubi N Mini">
 
                             <div class="info">
                                 <h2>Περιγραφή</h2>
@@ -275,26 +275,26 @@
             <footer class="footer-content">
                 <h4>Βρείτε μας στα ακόλουθα social media</h4>
 
-                <a href="/Exercise5/index.html">
-                    <img src="/assets/facebook_logo.png" width="50" height="50" alt="Facebook λογότυπο">
+                <a href="index.html">
+                    <img src="../assets/facebook_logo.png" width="50" height="50" alt="Facebook λογότυπο">
                 </a>
 
-                <a href="/Exercise5/index.html">
-                    <img src="/assets/twitter_logo.png" width="50" height="50" alt="Twitter λογότυπο">
+                <a href="index.html">
+                    <img src="../assets/twitter_logo.png" width="50" height="50" alt="Twitter λογότυπο">
                 </a>
 
-                <a href="/Exercise5/index.html">
-                    <img src="/assets/instagram_new.png" width="50" height="50" alt="Instagram λογότυπο">
+                <a href="index.html">
+                    <img src="../assets/instagram_new.png" width="50" height="50" alt="Instagram λογότυπο">
                 </a>
 
-                <a href="/Exercise5/index.html">
-                    <img src="/assets/youtube_logo.png" width="50" height="50" alt="Youtube λογότυπο">
+                <a href="index.html">
+                    <img src="../assets/youtube_logo.png" width="50" height="50" alt="Youtube λογότυπο">
                 </a>
 
                 <h4>©2022 Techodata Computers</h4>
 
-                <a href="/Exercise5/index.html">
-                    <img src="/assets/Technodata-logos_cropped_footer.png" width="170" height="50"
+                <a href="index.html">
+                    <img src="../assets/Technodata-logos_cropped_footer.png" width="170" height="50"
                         alt="Tecnhodata λογότυπο">
                 </a>
             </footer>
