--- a/index.html
+++ b/index.html
@@ -13,19 +13,19 @@
 
     <table>
         <tr>
-            <td><a href="Exercise1\index.html">Άσκηση 1: Δομή και περιεχόμενο ιστότοπου.</a></td>
+            <td><a href="Exercise1/index.html">Άσκηση 1: Δομή και περιεχόμενο ιστότοπου.</a></td>
         </tr>
         <tr>
-            <td><a href="Exercise2\index.html">Άσκηση 2: Μορφοποίηση περιεχομένου.</a></td>
+            <td><a href="Exercise2/index.html">Άσκηση 2: Μορφοποίηση περιεχομένου.</a></td>
         </tr>
         <tr>
-            <td><a href="Exercise3\index.html">Άσκηση 3: Διάταξη ιστοτόπου.</a></td>
+            <td><a href="Exercise3/index.html">Άσκηση 3: Διάταξη ιστοτόπου.</a></td>
         </tr>
         <tr>
-            <td><a href="Exercise4\index.html">Άσκηση 4: Responsive Design.</a></td>
+            <td><a href="Exercise4/index.html">Άσκηση 4: Responsive Design.</a></td>
         </tr>
         <tr>
-            <td><a href="Exercise5\index.html">Άσκηση 5: HTML Forms and validation.</a></td>
+            <td><a href="Exercise5/index.html">Άσκηση 5: HTML Forms and validation.</a></td>
         </tr>
     </table>
 
