--- a/Exercise1/product-categories.html
+++ b/Exercise1/product-categories.html
@@ -3,7 +3,7 @@
 
 <head>
     <title>Κατηγορίες Προϊόντων | TechnoData</title>
-    <link rel="icon" type="image/x-icon" href="/assets/logo.png">
+    <link rel="icon" type="image/x-icon" href="../assets/logo.png">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -12,16 +12,16 @@
 
 <body>
     <header class="header-light-color">
-        <a href="/Exercise1/index.html"><img src="/assets/Technodata-logos_black.png" width="700" height="160"
+        <a href="index.html"><img src="../assets/Technodata-logos_black.png" width="700" height="160"
                 alt="Technodata λογότυτπο"></a>
 
         <nav class="navigation">
-            <a href="/Exercise1/index.html">ΑΡΧΙΚΗ</a>
-            <a href="/Exercise1/product-categories.html#technology" class="active">ΠΡΟΙΟΝΤΑ ΚΑΙ ΤΕΧΝΟΛΟΓΙΑ</a>
-            <a href="/Exercise1/product-categories.html#spiti" class="active">ΓΙΑ ΤΟ ΣΠΙΤΙ</a>
-            <a href="/Exercise1/stores.html">ΚΑΤΑΣΤΗΜΑΤΑ</a>
-            <a href="/Exercise1/contact.html">ΕΠΙΚΟΙΝΩΝΙΑ</a>
-            <a href="/Exercise1/about_us.html">ΣΧΕΤΙΚΑ ΜΕ ΕΜΑΣ</a>
+            <a href="index.html">ΑΡΧΙΚΗ</a>
+            <a href="product-categories.html#technology" class="active">ΠΡΟΙΟΝΤΑ ΚΑΙ ΤΕΧΝΟΛΟΓΙΑ</a>
+            <a href="product-categories.html#spiti" class="active">ΓΙΑ ΤΟ ΣΠΙΤΙ</a>
+            <a href="stores.html">ΚΑΤΑΣΤΗΜΑΤΑ</a>
+            <a href="contact.html">ΕΠΙΚΟΙΝΩΝΙΑ</a>
+            <a href="about_us.html">ΣΧΕΤΙΚΑ ΜΕ ΕΜΑΣ</a>
         </nav>
     </header>
 
@@ -34,8 +34,8 @@
 
                 <ul>
                     <li class="category-card">
-                        <a href="/Exercise1/products-phones.html">
-                            <img src="/assets/phones.png" width="200" height="200"
+                        <a href="products-phones.html">
+                            <img src="../assets/phones.png" width="200" height="200"
                                 alt="εικόνα κατηγορίας κινητών τηλεφώνων">
 
                             <div class="info">
@@ -45,8 +45,8 @@
                     </li>
 
                     <li class="category-card">
-                        <a href="/Exercise1/product-categories.html">
-                            <img src="/assets/tablets.png" width="200" height="200" alt="εικόνα κατηγορίας tablet">
+                        <a href="product-categories.html">
+                            <img src="../assets/tablets.png" width="200" height="200" alt="εικόνα κατηγορίας tablet">
 
                             <div class="info">
                                 <h3>Tablet</h3>
@@ -55,8 +55,8 @@
                     </li>
 
                     <li class="category-card">
-                        <a href="/Exercise1/products-pcs.html">
-                            <img src="/assets/pcs.png" width="200" height="200" alt="εικόνα κατηγορίας ήχου">
+                        <a href="products-pcs.html">
+                            <img src="../assets/pcs.png" width="200" height="200" alt="εικόνα κατηγορίας ήχου">
 
                             <div class="info">
                                 <h3>Ηλεκτρονικοί Υπολογιστές</h3>
@@ -65,8 +65,8 @@
                     </li>
 
                     <li class="category-card">
-                        <a href="/Exercise1/product-categories.html">
-                            <img src="/assets/tvs.png" width="200" height="200" alt="εικόνα κατηγορίας εικόνας">
+                        <a href="product-categories.html">
+                            <img src="../assets/tvs.png" width="200" height="200" alt="εικόνα κατηγορίας εικόνας">
 
                             <div class="info">
                                 <h3>Εικόνα</h3>
@@ -75,8 +75,8 @@
                     </li>
 
                     <li class="category-card">
-                        <a href="/Exercise1/product-categories.html">
-                            <img src="/assets/sound.png" width="200" height="200" alt="εικόνα κατηγορίας ήχου">
+                        <a href="product-categories.html">
+                            <img src="../assets/sound.png" width="200" height="200" alt="εικόνα κατηγορίας ήχου">
 
                             <div class="info">
                                 <h3>Ήχος</h3>
@@ -85,8 +85,8 @@
                     </li>
 
                     <li class="category-card">
-                        <a href="/Exercise1/product-categories.html">
-                            <img src="/assets/consoles.png" width="200" height="200" alt="εικόνα κατηγορίας ήχου">
+                        <a href="product-categories.html">
+                            <img src="../assets/consoles.png" width="200" height="200" alt="εικόνα κατηγορίας ήχου">
 
                             <div class="info">
                                 <h3>Κονσόλες</h3>
@@ -101,8 +101,8 @@
 
                 <ul>
                     <li class="category-card">
-                        <a href="/Exercise1/product-categories.html">
-                            <img src="/assets/fridges.png" width="200" height="200" alt="εικόνα κατηγορίας ψυγείων">
+                        <a href="product-categories.html">
+                            <img src="../assets/fridges.png" width="200" height="200" alt="εικόνα κατηγορίας ψυγείων">
 
                             <div class="info">
                                 <h3>Ψυγεία</h3>
@@ -111,8 +111,8 @@
                     </li>
 
                     <li class="category-card">
-                        <a href="/Exercise1/product-categories.html">
-                            <img src="/assets/ovens.png" width="200" height="200" alt="εικόνα κατηγορίας κουζινών">
+                        <a href="product-categories.html">
+                            <img src="../assets/ovens.png" width="200" height="200" alt="εικόνα κατηγορίας κουζινών">
 
                             <div class="info">
                                 <h3>Κουζίνες</h3>
@@ -121,8 +121,8 @@
                     </li>
 
                     <li class="category-card">
-                        <a href="/Exercise1/product-categories.html">
-                            <img src="/assets/absorbers.png" width="200" height="200" alt="εικόνα κατηγορίας κουζινών">
+                        <a href="product-categories.html">
+                            <img src="../assets/absorbers.png" width="200" height="200" alt="εικόνα κατηγορίας κουζινών">
 
                             <div class="info">
                                 <h3>Απορροφητήρες</h3>
@@ -131,8 +131,8 @@
                     </li>
 
                     <li class="category-card">
-                        <a href="/Exercise1/product-categories.html">
-                            <img src="/assets/dishwashers.png" width="200" height="200"
+                        <a href="product-categories.html">
+                            <img src="../assets/dishwashers.png" width="200" height="200"
                                 alt="εικόνα κατηγορίας πληντύριων πιάτων">
 
                             <div class="info">
@@ -142,8 +142,8 @@
                     </li>
 
                     <li class="category-card">
-                        <a href="/Exercise1/product-categories.html">
-                            <img src="/assets/vacuums.png" width="200" height="200" alt="εικόνα κατηγορίας">
+                        <a href="product-categories.html">
+                            <img src="../assets/vacuums.png" width="200" height="200" alt="εικόνα κατηγορίας">
 
                             <div class="info">
                                 <h3>Σκούπες</h3>
@@ -152,8 +152,8 @@
                     </li>
 
                     <li class="category-card">
-                        <a href="/Exercise1/product-categories.html">
-                            <img src="/assets/washing-machines.png" width="200" height="200" alt="εικόνα κατηγορίας">
+                        <a href="product-categories.html">
+                            <img src="../assets/washing-machines.png" width="200" height="200" alt="εικόνα κατηγορίας">
 
                             <div class="info">
                                 <h3>Πληντύρια Ρούχων</h3>
@@ -168,8 +168,8 @@
 
                 <ul>
                     <li class="category-card">
-                        <a href="/Exercise1/product-categories.html">
-                            <img src="/assets/gps.png" width="200" height="200" alt="εικόνα κατηγορίας ψυγείων">
+                        <a href="product-categories.html">
+                            <img src="../assets/gps.png" width="200" height="200" alt="εικόνα κατηγορίας ψυγείων">
 
                             <div class="info">
                                 <h3>GPS</h3>
@@ -178,8 +178,8 @@
                     </li>
 
                     <li class="category-card">
-                        <a href="/Exercise1/product-categories.html">
-                            <img src="/assets/alarms.png" width="200" height="200" alt="εικόνα κατηγορίας κουζινών">
+                        <a href="product-categories.html">
+                            <img src="../assets/alarms.png" width="200" height="200" alt="εικόνα κατηγορίας κουζινών">
 
                             <div class="info">
                                 <h3>Συναγερμοί</h3>
@@ -188,8 +188,8 @@
                     </li>
 
                     <li class="category-card">
-                        <a href="/Exercise1/product-categories.html">
-                            <img src="/assets/reverse-cameras.png" width="200" height="200"
+                        <a href="product-categories.html">
+                            <img src="../assets/reverse-cameras.png" width="200" height="200"
                                 alt="εικόνα κατηγορίας κουζινών">
 
                             <div class="info">
@@ -199,8 +199,8 @@
                     </li>
 
                     <li class="category-card">
-                        <a href="/Exercise1/product-categories.html">
-                            <img src="/assets/parking-sensors.png" width="200" height="200"
+                        <a href="product-categories.html">
+                            <img src="../assets/parking-sensors.png" width="200" height="200"
                                 alt="εικόνα κατηγορίας πληντύριων πιάτων">
 
                             <div class="info">
@@ -210,8 +210,8 @@
                     </li>
 
                     <li class="category-card">
-                        <a href="/Exercise1/product-categories.html">
-                            <img src="/assets/car-lighting.png" width="200" height="200" alt="εικόνα κατηγορίας">
+                        <a href="product-categories.html">
+                            <img src="../assets/car-lighting.png" width="200" height="200" alt="εικόνα κατηγορίας">
 
                             <div class="info">
                                 <h3>Φωτισμός</h3>
@@ -220,8 +220,8 @@
                     </li>
 
                     <li class="category-card">
-                        <a href="/Exercise1/product-categories.html">
-                            <img src="/assets/car-accessories.png" width="200" height="200" alt="εικόνα κατηγορίας">
+                        <a href="product-categories.html">
+                            <img src="../assets/car-accessories.png" width="200" height="200" alt="εικόνα κατηγορίας">
 
                             <div class="info">
                                 <h3>Αξεσουάρ</h3>
@@ -237,8 +237,8 @@
 
             <ul>
                 <li class="product-card">
-                    <a href="/Exercise1/product-categories.html">
-                        <img src="/assets/popular0.png" width="200" height="200" alt="">
+                    <a href="product-categories.html">
+                        <img src="../assets/popular0.png" width="200" height="200" alt="">
                         <p class="category">Κινητή Τηλεφωνία</p>
                         <p class="name">Apple iPhone 13 5G (4GB/128GB)</p>
                         <p class="price">865,70€</p>
@@ -246,8 +246,8 @@
                 </li>
 
                 <li class="product-card">
-                    <a href="/Exercise1/product-categories.html">
-                        <img src="/assets/popular1.png" width="200" height="200" alt="">
+                    <a href="product-categories.html">
+                        <img src="../assets/popular1.png" width="200" height="200" alt="">
                         <p class="category">Ηλεκτρονικοί Υπολογιστές</p>
                         <p class="name">Apple MacBook Air 13.3" (2020)</p>
                         <p class="price">1.130,00€</p>
@@ -255,8 +255,8 @@
                 </li>
 
                 <li class="product-card">
-                    <a href="/Exercise1/product-categories.html">
-                        <img src="/assets/popular2.png" width="200" height="200" alt="">
+                    <a href="product-categories.html">
+                        <img src="../assets/popular2.png" width="200" height="200" alt="">
                         <p class="category">Πληντύρια Ρούχων</p>
                         <p class="name">AEG LFR73964VG</p>
                         <p class="price">849,00€</p>
@@ -264,8 +264,8 @@
                 </li>
 
                 <li class="product-card">
-                    <a href="/Exercise1/product-categories.html">
-                        <img src="/assets/popular3.png" width="200" height="200" alt="">
+                    <a href="product-categories.html">
+                        <img src="../assets/popular3.png" width="200" height="200" alt="">
                         <p class="category">Αξεσουάρ Αυτοκινήτου</p>
                         <p class="name">Baseus 2xUSB 5A</p>
                         <p class="price">7,98€</p>
@@ -273,8 +273,8 @@
                 </li>
 
                 <li class="product-card">
-                    <a href="/Exercise1/product-categories.html">
-                        <img src="/assets/popular4.png" width="200" height="200" alt="">
+                    <a href="product-categories.html">
+                        <img src="../assets/popular4.png" width="200" height="200" alt="">
                         <p class="category">Ψυγεία</p>
                         <p class="name">Bosch KGN36NLEA</p>
                         <p class="price">469,00€</p>
@@ -282,8 +282,8 @@
                 </li>
 
                 <li class="product-card">
-                    <a href="/Exercise1/product-categories.html">
-                        <img src="/assets/popular5.png" width="200" height="200" alt="">
+                    <a href="product-categories.html">
+                        <img src="../assets/popular5.png" width="200" height="200" alt="">
                         <p class="category">Ηλεκτρονικοί Υπολογιστές</p>
                         <p class="name">Apple iMac 24" 2021</p>
                         <p class="price">1.630,00€</p>
@@ -295,16 +295,16 @@
 
     <footer class="footer-content">
         <h4>Βρείτε μας στα ακόλουθα social media</h4> <!-- ΙΣΩΣ ΒΑΛΟΥΜΕ ΚΛΑΣΣ ΣΤΟ Η4 ΜΟΝΟ ΤΟΥ Η ΣΤΑ ΥΠΟΛΟΙΠΑ-->
-        <a href="/Exercise1/index.html"><img src="/assets/facebook_logo.png" width="50" height="50"
+        <a href="index.html"><img src="../assets/facebook_logo.png" width="50" height="50"
                 alt="Facebook λογότυπο"></a>
-        <a href="/Exercise1/index.html"><img src="/assets/twitter_logo.png" width="50" height="50"
+        <a href="index.html"><img src="../assets/twitter_logo.png" width="50" height="50"
                 alt="Twitter λογότυπο"></a>
-        <a href="/Exercise1/index.html"><img src="/assets/instagram_new.png" width="50" height="50"
+        <a href="index.html"><img src="../assets/instagram_new.png" width="50" height="50"
                 alt="Instagram λογότυπο"></a>
-        <a href="/Exercise1/index.html"><img src="/assets/youtube_logo.png" width="50" height="50"
+        <a href="index.html"><img src="../assets/youtube_logo.png" width="50" height="50"
                 alt="Youtube λογότυπο"></a>
         <h4>©2022 Techodata Computers</h4>
-        <a href="/Exercise1/index.html"><img src="/assets/Technodata-logos_cropped_footer.png" width="170" height="50"
+        <a href="index.html"><img src="../assets/Technodata-logos_cropped_footer.png" width="170" height="50"
                 alt="Tecnhodata λογότυπο"></a>
     </footer>
 </body>
