--- a/Exercise1/products-phones.html
+++ b/Exercise1/products-phones.html
@@ -3,7 +3,7 @@
 
 <head>
     <title>Κινητή Τηλεφωνία | Technodata</title>
-    <link rel="icon" type="image/x-icon" href="/assets/logo.png">
+    <link rel="icon" type="image/x-icon" href="../assets/logo.png">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -13,16 +13,16 @@
 <body>
     <header class="header-light-color">
 
-        <a href="/Exercise1/index.html"><img src="/assets/Technodata-logos_black.png" width="700" height="160"
+        <a href="index.html"><img src="../assets/Technodata-logos_black.png" width="700" height="160"
                 alt="Technodata λογότυτπο"></a>
 
         <nav class="navigation">
-            <a href="/Exercise1/index.html">ΑΡΧΙΚΗ</a>
-            <a href="/Exercise1/product-categories.html#technology" class="active">ΠΡΟΙΟΝΤΑ ΚΑΙ ΤΕΧΝΟΛΟΓΙΑ</a>
-            <a href="/Exercise1/product-categories.html#spiti">ΓΙΑ ΤΟ ΣΠΙΤΙ</a>
-            <a href="/Exercise1/stores.html">ΚΑΤΑΣΤΗΜΑΤΑ</a>
-            <a href="/Exercise1/contact.html">ΕΠΙΚΟΙΝΩΝΙΑ</a>
-            <a href="/Exercise1/about_us.html">ΣΧΕΤΙΚΑ ΜΕ ΕΜΑΣ</a>
+            <a href="index.html">ΑΡΧΙΚΗ</a>
+            <a href="product-categories.html#technology" class="active">ΠΡΟΙΟΝΤΑ ΚΑΙ ΤΕΧΝΟΛΟΓΙΑ</a>
+            <a href="product-categories.html#spiti">ΓΙΑ ΤΟ ΣΠΙΤΙ</a>
+            <a href="stores.html">ΚΑΤΑΣΤΗΜΑΤΑ</a>
+            <a href="contact.html">ΕΠΙΚΟΙΝΩΝΙΑ</a>
+            <a href="about_us.html">ΣΧΕΤΙΚΑ ΜΕ ΕΜΑΣ</a>
         </nav>
     </header>
 
@@ -35,8 +35,8 @@
         <section id="products">
             <ul>
                 <li class="product-card">
-                    <a href="/Exercise1/product-iphone14-pro-max.html">
-                        <img src="/assets/iphone14pro.png" width="350" height="350" alt="Apple iPhone 14 Pro Max">
+                    <a href="product-iphone14-pro-max.html">
+                        <img src="../assets/iphone14pro.png" width="350" height="350" alt="Apple iPhone 14 Pro Max">
                         <h2>Apple iPhone 14 Pro Max 5G</h2>
                     </a>
 
@@ -57,8 +57,8 @@
                 </li>
 
                 <li class="product-card">
-                    <a href="/Exercise1/products-phones.html">
-                        <img src="/assets/samsungs22.png" width="350" height="350" alt="Samsung S22">
+                    <a href="products-phones.html">
+                        <img src="../assets/samsungs22.png" width="350" height="350" alt="Samsung S22">
 
                         <h2>Samsung S22 5G</h2>
                     </a>
@@ -79,8 +79,8 @@
                 </li>
 
                 <li class="product-card">
-                    <a href="/Exercise1/products-phones.html">
-                        <img src="/assets/xiaomi.png" width="350" height="350" alt="Xiaomi 12T Pro">
+                    <a href="products-phones.html">
+                        <img src="../assets/xiaomi.png" width="350" height="350" alt="Xiaomi 12T Pro">
 
                         <h2>Xiaomi 12T Pro 5G</h2>
                     </a>
@@ -101,8 +101,8 @@
                 </li>
 
                 <li class="product-card">
-                    <a href="/Exercise1/products-phones.html">
-                        <img src="/assets/iphone_old.png" width="350" height="350" alt="Apple iPhone 11">
+                    <a href="products-phones.html">
+                        <img src="../assets/iphone_old.png" width="350" height="350" alt="Apple iPhone 11">
 
                         <h2>Apple iPhone 11</h2>
                     </a>
@@ -123,8 +123,8 @@
                 </li>
 
                 <li class="product-card">
-                    <a href="/Exercise1/products-phones.html">
-                        <img src="/assets/samsung_old.png" width="220" height="350" alt="Samsung S10 Ultra">
+                    <a href="products-phones.html">
+                        <img src="../assets/samsung_old.png" width="220" height="350" alt="Samsung S10 Ultra">
 
                         <h2>Samsung S10 Ultra 5G</h2>
                     </a>
@@ -145,8 +145,8 @@
                 </li>
 
                 <li class="product-card">
-                    <a href="/Exercise1/products-phones.html">
-                        <img src="/assets/xiaomi_note9.png" width="350" height="350" alt="Xiaomi Note 9 Pro">
+                    <a href="products-phones.html">
+                        <img src="../assets/xiaomi_note9.png" width="350" height="350" alt="Xiaomi Note 9 Pro">
 
                         <h2>Xiaomi Note 9 Pro</h2>
                     </a>
@@ -171,16 +171,16 @@
 
     <footer class="footer-content">
         <h4>Βρείτε μας στα ακόλουθα social media</h4>
-        <a href="/Exercise1/index.html"><img src="/assets/facebook_logo.png" width="50" height="50"
+        <a href="index.html"><img src="../assets/facebook_logo.png" width="50" height="50"
                 alt="Facebook λογότυπο"></a>
-        <a href="/Exercise1/index.html"><img src="/assets/twitter_logo.png" width="50" height="50"
+        <a href="index.html"><img src="../assets/twitter_logo.png" width="50" height="50"
                 alt="Twitter λογότυπο"></a>
-        <a href="/Exercise1/index.html"><img src="/assets/instagram_new.png" width="50" height="50"
+        <a href="index.html"><img src="../assets/instagram_new.png" width="50" height="50"
                 alt="Instagram λογότυπο"></a>
-        <a href="/Exercise1/index.html"><img src="/assets/youtube_logo.png" width="50" height="50"
+        <a href="index.html"><img src="../assets/youtube_logo.png" width="50" height="50"
                 alt="Youtube λογότυπο"></a>
         <h4>©2022 Techodata Computers</h4>
-        <a href="/Exercise1/index.html"><img src="/assets/Technodata-logos_cropped_footer.png" width="170" height="50"
+        <a href="index.html"><img src="../assets/Technodata-logos_cropped_footer.png" width="170" height="50"
                 alt="Tecnhodata λογότυπο"></a>
     </footer>
 </body>
