--- a/Exercise2/product-categories.html
+++ b/Exercise2/product-categories.html
@@ -3,26 +3,26 @@
 
 <head>
     <title>Κατηγορίες Προϊόντων | TechnoData</title>
-    <link rel="icon" type="image/x-icon" href="/assets/logo.png">
+    <link rel="icon" type="image/x-icon" href="../assets/logo.png">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="author" content="co-authored by Anastasios Mpourtsouklis, Dimitrios Paraskeuiotis">
-    <link rel="stylesheet" href="/Exercise2/css/style.css">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
     <header class="header-light-color">
-        <a href="/Exercise2/index.html"><img src="/assets/Technodata-logos_black.png" width="700" height="160"
+        <a href="index.html"><img src="../assets/Technodata-logos_black.png" width="700" height="160"
                 alt="Technodata λογότυτπο"></a>
 
         <nav class="navigation">
-            <a href="/Exercise2/index.html">ΑΡΧΙΚΗ</a>
-            <a href="/Exercise2/product-categories.html#technology" class="active">ΠΡΟΙΟΝΤΑ ΚΑΙ ΤΕΧΝΟΛΟΓΙΑ</a>
-            <a href="/Exercise2/product-categories.html#spiti" class="active">ΓΙΑ ΤΟ ΣΠΙΤΙ</a>
-            <a href="/Exercise2/stores.html">ΚΑΤΑΣΤΗΜΑΤΑ</a>
-            <a href="/Exercise2/contact.html">ΕΠΙΚΟΙΝΩΝΙΑ</a>
-            <a href="/Exercise2/about_us.html">ΣΧΕΤΙΚΑ ΜΕ ΕΜΑΣ</a>
+            <a href="index.html">ΑΡΧΙΚΗ</a>
+            <a href="product-categories.html#technology" class="active">ΠΡΟΙΟΝΤΑ ΚΑΙ ΤΕΧΝΟΛΟΓΙΑ</a>
+            <a href="product-categories.html#spiti" class="active">ΓΙΑ ΤΟ ΣΠΙΤΙ</a>
+            <a href="stores.html">ΚΑΤΑΣΤΗΜΑΤΑ</a>
+            <a href="contact.html">ΕΠΙΚΟΙΝΩΝΙΑ</a>
+            <a href="about_us.html">ΣΧΕΤΙΚΑ ΜΕ ΕΜΑΣ</a>
         </nav>
     </header>
 
@@ -34,8 +34,8 @@
 
             <ul>
                 <li class="category-card">
-                    <a href="/Exercise2/products-phones.html">
-                        <img class="image" src="/assets/phones.png" width="200" height="200"
+                    <a href="products-phones.html">
+                        <img class="image" src="../assets/phones.png" width="200" height="200"
                             alt="εικόνα κατηγορίας κινητών τηλεφώνων">
 
                         <h3 class="category-name">Κινητή Τηλεφωνία</h3>
@@ -43,8 +43,8 @@
                 </li>
 
                 <li class="category-card">
-                    <a href="/Exercise2/product-categories.html">
-                        <img class="image" src="/assets/tablets.png" width="200" height="200"
+                    <a href="product-categories.html">
+                        <img class="image" src="../assets/tablets.png" width="200" height="200"
                             alt="εικόνα κατηγορίας tablet">
 
                         <h3 class="category-name">
@@ -54,8 +54,8 @@
                 </li>
 
                 <li class="category-card">
-                    <a href="/Exercise2/products-pcs.html">
-                        <img class="image" src="/assets/pcs.png" width="200" height="200" alt="εικόνα κατηγορίας ήχου">
+                    <a href="products-pcs.html">
+                        <img class="image" src="../assets/pcs.png" width="200" height="200" alt="εικόνα κατηγορίας ήχου">
 
 
                         <h3 class="category-name">
@@ -65,8 +65,8 @@
                 </li>
 
                 <li class="category-card">
-                    <a href="/Exercise2/product-categories.html">
-                        <img class="image" src="/assets/tvs.png" width="200" height="200"
+                    <a href="product-categories.html">
+                        <img class="image" src="../assets/tvs.png" width="200" height="200"
                             alt="εικόνα κατηγορίας εικόνας">
 
 
@@ -77,8 +77,8 @@
                 </li>
 
                 <li class="category-card">
-                    <a href="/Exercise2/product-categories.html">
-                        <img class="image" src="/assets/sound.png" width="200" height="200"
+                    <a href="product-categories.html">
+                        <img class="image" src="../assets/sound.png" width="200" height="200"
                             alt="εικόνα κατηγορίας ήχου">
 
 
@@ -89,8 +89,8 @@
                 </li>
 
                 <li class="category-card">
-                    <a href="/Exercise2/product-categories.html">
-                        <img class="image" src="/assets/consoles.png" width="200" height="200"
+                    <a href="product-categories.html">
+                        <img class="image" src="../assets/consoles.png" width="200" height="200"
                             alt="εικόνα κατηγορίας ήχου">
 
                         <h3 class="category-name">
@@ -106,8 +106,8 @@
 
             <ul>
                 <li class="category-card">
-                    <a href="/Exercise2/product-categories.html">
-                        <img class="image" src="/assets/fridges.png" width="200" height="200"
+                    <a href="product-categories.html">
+                        <img class="image" src="../assets/fridges.png" width="200" height="200"
                             alt="εικόνα κατηγορίας ψυγείων">
 
                         <h3 class="category-name">
@@ -117,8 +117,8 @@
                 </li>
 
                 <li class="category-card">
-                    <a href="/Exercise2/product-categories.html">
-                        <img class="image" src="/assets/ovens.png" width="200" height="200"
+                    <a href="product-categories.html">
+                        <img class="image" src="../assets/ovens.png" width="200" height="200"
                             alt="εικόνα κατηγορίας κουζινών">
 
                         <h3 class="category-name">
@@ -128,8 +128,8 @@
                 </li>
 
                 <li class="category-card">
-                    <a href="/Exercise2/product-categories.html">
-                        <img class="image" src="/assets/absorbers.png" width="200" height="200"
+                    <a href="product-categories.html">
+                        <img class="image" src="../assets/absorbers.png" width="200" height="200"
                             alt="εικόνα κατηγορίας κουζινών">
 
                         <h3 class="category-name">
@@ -139,8 +139,8 @@
                 </li>
 
                 <li class="category-card">
-                    <a href="/Exercise2/product-categories.html">
-                        <img class="image" src="/assets/dishwashers.png" width="200" height="200"
+                    <a href="product-categories.html">
+                        <img class="image" src="../assets/dishwashers.png" width="200" height="200"
                             alt="εικόνα κατηγορίας πληντύριων πιάτων">
 
                         <h3 class="category-name">
@@ -150,8 +150,8 @@
                 </li>
 
                 <li class="category-card">
-                    <a href="/Exercise2/product-categories.html">
-                        <img class="image" src="/assets/vacuums.png" width="200" height="200" alt="εικόνα κατηγορίας">
+                    <a href="product-categories.html">
+                        <img class="image" src="../assets/vacuums.png" width="200" height="200" alt="εικόνα κατηγορίας">
 
                         <h3 class="category-name">
                             Σκούπες
@@ -160,8 +160,8 @@
                 </li>
 
                 <li class="category-card">
-                    <a href="/Exercise2/product-categories.html">
-                        <img class="image" src="/assets/washing-machines.png" width="200" height="200"
+                    <a href="product-categories.html">
+                        <img class="image" src="../assets/washing-machines.png" width="200" height="200"
                             alt="εικόνα κατηγορίας">
 
                         <h3 class="category-name">
@@ -177,8 +177,8 @@
 
             <ul>
                 <li class="category-card">
-                    <a href="/Exercise2/product-categories.html">
-                        <img class="image" src="/assets/gps.png" width="200" height="200"
+                    <a href="product-categories.html">
+                        <img class="image" src="../assets/gps.png" width="200" height="200"
                             alt="εικόνα κατηγορίας ψυγείων">
 
                         <h3 class="category-name">
@@ -188,8 +188,8 @@
                 </li>
 
                 <li class="category-card">
-                    <a href="/Exercise2/product-categories.html">
-                        <img class="image" src="/assets/alarms.png" width="200" height="200"
+                    <a href="product-categories.html">
+                        <img class="image" src="../assets/alarms.png" width="200" height="200"
                             alt="εικόνα κατηγορίας κουζινών">
 
                         <h3 class="category-name">
@@ -199,8 +199,8 @@
                 </li>
 
                 <li class="category-card">
-                    <a href="/Exercise2/product-categories.html">
-                        <img class="image" src="/assets/reverse-cameras.png" width="200" height="200"
+                    <a href="product-categories.html">
+                        <img class="image" src="../assets/reverse-cameras.png" width="200" height="200"
                             alt="εικόνα κατηγορίας κουζινών">
 
                         <h3 class="category-name">
@@ -210,8 +210,8 @@
                 </li>
 
                 <li class="category-card">
-                    <a href="/Exercise2/product-categories.html">
-                        <img class="image" src="/assets/parking-sensors.png" width="200" height="200"
+                    <a href="product-categories.html">
+                        <img class="image" src="../assets/parking-sensors.png" width="200" height="200"
                             alt="εικόνα κατηγορίας πληντύριων πιάτων">
 
                         <h3 class="category-name">
@@ -221,8 +221,8 @@
                 </li>
 
                 <li class="category-card">
-                    <a href="/Exercise2/product-categories.html">
-                        <img class="image" src="/assets/car-lighting.png" width="200" height="200"
+                    <a href="product-categories.html">
+                        <img class="image" src="../assets/car-lighting.png" width="200" height="200"
                             alt="εικόνα κατηγορίας">
 
                         <h3 class="category-name">
@@ -232,8 +232,8 @@
                 </li>
 
                 <li class="category-card">
-                    <a href="/Exercise2/product-categories.html">
-                        <img class="image" src="/assets/car-accessories.png" width="200" height="200"
+                    <a href="product-categories.html">
+                        <img class="image" src="../assets/car-accessories.png" width="200" height="200"
                             alt="εικόνα κατηγορίας">
 
                         <h3 class="category-name">
@@ -249,8 +249,8 @@
 
             <ul>
                 <li class="product-card">
-                    <a href="/Exercise2/product-categories.html">
-                        <img class="image" src="/assets/popular0.png" width="200" height="200" alt="">
+                    <a href="product-categories.html">
+                        <img class="image" src="../assets/popular0.png" width="200" height="200" alt="">
                         <h3>Κινητή Τηλεφωνία</h3>
                         <p class="name">Apple iPhone 13 5G (4GB/128GB)</p>
                         <p class="price">865,70€</p>
@@ -258,8 +258,8 @@
                 </li>
 
                 <li class="product-card">
-                    <a href="/Exercise2/product-categories.html">
-                        <img class="image" src="/assets/popular1.png" width="200" height="200" alt="">
+                    <a href="product-categories.html">
+                        <img class="image" src="../assets/popular1.png" width="200" height="200" alt="">
                         <h3>Ηλεκτρονικοί Υπολογιστές</h3>
                         <p class="name">Apple MacBook Air 13.3" (2020)</p>
                         <p class="price">1.130,00€</p>
@@ -267,8 +267,8 @@
                 </li>
 
                 <li class="product-card">
-                    <a href="/Exercise2/product-categories.html">
-                        <img class="image" src="/assets/popular2.png" width="200" height="200" alt="">
+                    <a href="product-categories.html">
+                        <img class="image" src="../assets/popular2.png" width="200" height="200" alt="">
                         <h3>Πληντύρια Ρούχων</h3>
                         <p class="name">AEG LFR73964VG</p>
                         <p class="price">849,00€</p>
@@ -276,8 +276,8 @@
                 </li>
 
                 <li class="product-card">
-                    <a href="/Exercise2/product-categories.html">
-                        <img class="image" src="/assets/popular3.png" width="200" height="200" alt="">
+                    <a href="product-categories.html">
+                        <img class="image" src="../assets/popular3.png" width="200" height="200" alt="">
                         <h3>Αξεσουάρ Αυτοκινήτου</h3>
                         <p class="name">Baseus 2xUSB 5A</p>
                         <p class="price">7,98€</p>
@@ -285,8 +285,8 @@
                 </li>
 
                 <li class="product-card">
-                    <a href="/Exercise2/product-categories.html">
-                        <img class="image" src="/assets/popular4.png" width="200" height="200" alt="">
+                    <a href="product-categories.html">
+                        <img class="image" src="../assets/popular4.png" width="200" height="200" alt="">
                         <h3>Ψυγεία</h3>
                         <p class="name">Bosch KGN36NLEA</p>
                         <p class="price">469,00€</p>
@@ -294,8 +294,8 @@
                 </li>
 
                 <li class="product-card">
-                    <a href="/Exercise2/product-categories.html">
-                        <img class="image" src="/assets/popular5.png" width="200" height="200" alt="">
+                    <a href="product-categories.html">
+                        <img class="image" src="../assets/popular5.png" width="200" height="200" alt="">
                         <h3>Ηλεκτρονικοί Υπολογιστές</h3>
                         <p class="name">Apple iMac 24" 2021</p>
                         <p class="price">1.630,00€</p>
@@ -308,23 +308,23 @@
     <footer class="footer-content">
         <h4>Βρείτε μας στα ακόλουθα social media</h4>
 
-        <a href="/Exercise2/index.html">
-            <img src="/assets/facebook_logo.png" width="50" height="50" alt="Facebook λογότυπο">
+        <a href="index.html">
+            <img src="../assets/facebook_logo.png" width="50" height="50" alt="Facebook λογότυπο">
         </a>
-        <a href="/Exercise2/index.html">
-            <img src="/assets/twitter_logo.png" width="50" height="50" alt="Twitter λογότυπο">
+        <a href="index.html">
+            <img src="../assets/twitter_logo.png" width="50" height="50" alt="Twitter λογότυπο">
         </a>
-        <a href="/Exercise2/index.html">
-            <img src="/assets/instagram_new.png" width="50" height="50" alt="Instagram λογότυπο">
+        <a href="index.html">
+            <img src="../assets/instagram_new.png" width="50" height="50" alt="Instagram λογότυπο">
         </a>
-        <a href="/Exercise2/index.html">
-            <img src="/assets/youtube_logo.png" width="50" height="50" alt="Youtube λογότυπο">
+        <a href="index.html">
+            <img src="../assets/youtube_logo.png" width="50" height="50" alt="Youtube λογότυπο">
         </a>
 
         <h4>©2022 Techodata Computers</h4>
 
-        <a href="/Exercise2/index.html">
-            <img src="/assets/Technodata-logos_cropped_footer.png" width="170" height="50" alt="Tecnhodata λογότυπο">
+        <a href="index.html">
+            <img src="../assets/Technodata-logos_cropped_footer.png" width="170" height="50" alt="Tecnhodata λογότυπο">
         </a>
     </footer>
 </body>
