--- a/Exercise3/index.html
+++ b/Exercise3/index.html
@@ -3,28 +3,28 @@
 
 <head>
     <title>Technodata</title>
-    <link rel="icon" type="image/x-icon" href="/assets/logo.png">
+    <link rel="icon" type="image/x-icon" href="../assets/logo.png">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="author" content="co-authored by Anastasios Mpourtsouklis, Dimitrios Paraskeuiotis">
-    <link rel="stylesheet" href="/Exercise3/css/style.css">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
     <div class="grid-container">
         <div class="header-item">
             <header class="header-light-color">
-                <a href="/Exercise3/index.html">
-                    <img src="/assets/Technodata-logos_black.png" width="700" height="160" alt="Technodata λογότυτπο">
+                <a href="index.html">
+                    <img src="../assets/Technodata-logos_black.png" width="700" height="160" alt="Technodata λογότυτπο">
                 </a>
 
                 <nav class="navigation">
-                    <a href="/Exercise3/index.html" class="active">ΑΡΧΙΚΗ</a>
-                    <a href="/Exercise3/product-categories.html">ΚΑΤΗΓΟΡΙΕΣ ΠΡΟΪΟΝΤΩΝ</a>
-                    <a href="/Exercise3/stores.html">ΚΑΤΑΣΤΗΜΑΤΑ</a>
-                    <a href="/Exercise3/contact.html">ΕΠΙΚΟΙΝΩΝΙΑ</a>
-                    <a href="/Exercise3/about_us.html">ΣΧΕΤΙΚΑ ΜΕ ΕΜΑΣ</a>
+                    <a href="index.html" class="active">ΑΡΧΙΚΗ</a>
+                    <a href="product-categories.html">ΚΑΤΗΓΟΡΙΕΣ ΠΡΟΪΟΝΤΩΝ</a>
+                    <a href="stores.html">ΚΑΤΑΣΤΗΜΑΤΑ</a>
+                    <a href="contact.html">ΕΠΙΚΟΙΝΩΝΙΑ</a>
+                    <a href="about_us.html">ΣΧΕΤΙΚΑ ΜΕ ΕΜΑΣ</a>
                 </nav>
             </header>
         </div>
@@ -47,27 +47,27 @@
 
                     <div class="prod-photos">
                         <div class="product">
-                            <a href="/Exercise3/product-iphone14-pro-max.html">
-                                <img src="/assets/iphone14pro.png" width="245" height="230" alt="Apple iPhone 14 Pro Max"
+                            <a href="product-iphone14-pro-max.html">
+                                <img src="../assets/iphone14pro.png" width="245" height="230" alt="Apple iPhone 14 Pro Max"
                                     class="image">
                             </a>
                         </div>
 
                         <div class="product">
-                            <a href="/Exercise3/products-phones.html">
-                                <img src="/assets/samsungs22.png" width="245" height="230" alt="Samsung S22 Ultra" class="image">
+                            <a href="products-phones.html">
+                                <img src="../assets/samsungs22.png" width="245" height="230" alt="Samsung S22 Ultra" class="image">
                             </a>
                         </div>
 
                         <div class="product">
-                            <a href="/Exercise3/products-phones.html">
-                                <img src="/assets/xiaomi.png" width="260" height="230" alt="Xiaomi 12T Pro" class="image">
+                            <a href="products-phones.html">
+                                <img src="../assets/xiaomi.png" width="260" height="230" alt="Xiaomi 12T Pro" class="image">
                             </a>
                         </div>
 
                         <div class="product">
-                            <a href="/Exercise3/products-phones.html">
-                                <img src="/assets/ipad.png" width="230" height="230" alt="Apple iPad Pro" class="image">
+                            <a href="products-phones.html">
+                                <img src="../assets/ipad.png" width="230" height="230" alt="Apple iPad Pro" class="image">
                             </a>
                         </div>
                     </div>
@@ -81,26 +81,26 @@
 
                     <div class="prod-photos">
                         <div class="product">
-                            <a href="/Exercise3/products-phones.html">
-                                <img src="/assets/iphone_old.png" width="255" height="240" alt="Apple iPhone 11" class="image">
+                            <a href="products-phones.html">
+                                <img src="../assets/iphone_old.png" width="255" height="240" alt="Apple iPhone 11" class="image">
                             </a>
                         </div>
 
                         <div class="product">
-                            <a href="/Exercise3/products-phones.html">
-                                <img src="/assets/samsung_old.png" width="155" height="240" alt="Samsung S10+" class="image" id="slim">
+                            <a href="products-phones.html">
+                                <img src="../assets/samsung_old.png" width="155" height="240" alt="Samsung S10+" class="image" id="slim">
                             </a>
                         </div>
 
                         <div class="product">
-                            <a href="/Exercise3/products-phones.html">
-                                <img src="/assets/xiaomi_old.png" width="255" height="240" alt="Xiaomi Pad 5" class="image">
+                            <a href="products-phones.html">
+                                <img src="../assets/xiaomi_old.png" width="255" height="240" alt="Xiaomi Pad 5" class="image">
                             </a>
                         </div>
 
                         <div class="product">
-                            <a href="/Exercise3/products-phones.html">
-                                <img src="/assets/apple_watch.png" width="255" height="240" alt="Apple Watch Series 2" class="image">
+                            <a href="products-phones.html">
+                                <img src="../assets/apple_watch.png" width="255" height="240" alt="Apple Watch Series 2" class="image">
                             </a>
                         </div>
                     </div>
@@ -112,25 +112,25 @@
             <footer class="footer-content">
                 <h4>Βρείτε μας στα ακόλουθα social media</h4>
 
-                <a href="/Exercise3/index.html">
-                    <img src="/assets/facebook_logo.png" width="50" height="50" alt="Facebook λογότυπο">
+                <a href="index.html">
+                    <img src="../assets/facebook_logo.png" width="50" height="50" alt="Facebook λογότυπο">
                 </a>
 
-                <a href="/Exercise3/index.html">
-                    <img src="/assets/twitter_logo.png" width="50" height="50" alt="Twitter λογότυπο">
+                <a href="index.html">
+                    <img src="../assets/twitter_logo.png" width="50" height="50" alt="Twitter λογότυπο">
                 </a>
 
-                <a href="/Exercise3/index.html">
-                    <img src="/assets/instagram_new.png" width="50" height="50" alt="Instagram λογότυπο">
+                <a href="index.html">
+                    <img src="../assets/instagram_new.png" width="50" height="50" alt="Instagram λογότυπο">
                 </a>
 
-                <a href="/Exercise3/index.html">
-                    <img src="/assets/youtube_logo.png" width="50" height="50" alt="Youtube λογότυπο">
+                <a href="index.html">
+                    <img src="../assets/youtube_logo.png" width="50" height="50" alt="Youtube λογότυπο">
                 </a>
                 <h4>©2022 Techodata Computers</h4>
 
-                <a href="/Exercise3/index.html">
-                    <img src="/assets/Technodata-logos_cropped_footer.png" width="170" height="50" alt="Tecnhodata λογότυπο">
+                <a href="index.html">
+                    <img src="../assets/Technodata-logos_cropped_footer.png" width="170" height="50" alt="Tecnhodata λογότυπο">
                 </a>
             </footer>
         </div>
