--- a/Exercise3/stores.html
+++ b/Exercise3/stores.html
@@ -3,27 +3,27 @@
 
 <head>
     <title>Καταστήματα | Technodata</title>
-    <link rel="icon" type="image/x-icon" href="/assets/logo.png">
+    <link rel="icon" type="image/x-icon" href="../assets/logo.png">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="author" content="co-authored by Anastasios Mpourtsouklis, Dimitrios Paraskeuiotis">
-    <link rel="stylesheet" href="/Exercise3/css/style.css">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
     <div class="grid-container">
         <div class="header-item">
             <header class="header-light-color">
-                <a href="index.html"><img src="/assets/Technodata-logos_black.png" width="700" height="160"
+                <a href="index.html"><img src="../assets/Technodata-logos_black.png" width="700" height="160"
                         alt="Technodata λογότυτπο"></a>
 
                 <nav class="navigation">
-                    <a href="/Exercise3/index.html">ΑΡΧΙΚΗ</a>
-                    <a href="/Exercise3/product-categories.html">ΚΑΤΗΓΟΡΙΕΣ ΠΡΟΪΟΝΤΩΝ</a>
-                    <a href="/Exercise3/stores.html" class="active">ΚΑΤΑΣΤΗΜΑΤΑ</a>
-                    <a href="/Exercise3/contact.html">ΕΠΙΚΟΙΝΩΝΙΑ</a>
-                    <a href="/Exercise3/about_us.html">ΣΧΕΤΙΚΑ ΜΕ ΕΜΑΣ</a>
+                    <a href="index.html">ΑΡΧΙΚΗ</a>
+                    <a href="product-categories.html">ΚΑΤΗΓΟΡΙΕΣ ΠΡΟΪΟΝΤΩΝ</a>
+                    <a href="stores.html" class="active">ΚΑΤΑΣΤΗΜΑΤΑ</a>
+                    <a href="contact.html">ΕΠΙΚΟΙΝΩΝΙΑ</a>
+                    <a href="about_us.html">ΣΧΕΤΙΚΑ ΜΕ ΕΜΑΣ</a>
                 </nav>
             </header>
         </div>
@@ -53,25 +53,25 @@
                 <h4>Βρείτε μας στα ακόλουθα social media</h4>
 
                 <a href="index.html">
-                    <img src="/assets/facebook_logo.png" width="50" height="50" alt="Facebook λογότυπο">
+                    <img src="../assets/facebook_logo.png" width="50" height="50" alt="Facebook λογότυπο">
                 </a>
 
                 <a href="index.html">
-                    <img src="/assets/twitter_logo.png" width="50" height="50" alt="Twitter λογότυπο">
+                    <img src="../assets/twitter_logo.png" width="50" height="50" alt="Twitter λογότυπο">
                 </a>
 
                 <a href="index.html">
-                    <img src="/assets/instagram_new.png" width="50" height="50" alt="Instagram λογότυπο">
+                    <img src="../assets/instagram_new.png" width="50" height="50" alt="Instagram λογότυπο">
                 </a>
 
                 <a href="index.html">
-                    <img src="/assets/youtube_logo.png" width="50" height="50" alt="Youtube λογότυπο">
+                    <img src="../assets/youtube_logo.png" width="50" height="50" alt="Youtube λογότυπο">
                 </a>
 
                 <h4>©2022 Techodata Computers</h4>
 
                 <a href="index.html">
-                    <img src="/assets/Technodata-logos_cropped_footer.png" width="170" height="50"
+                    <img src="../assets/Technodata-logos_cropped_footer.png" width="170" height="50"
                         alt="Tecnhodata λογότυπο">
                 </a>
             </footer>
