--- a/Exercise4/contact.html
+++ b/Exercise4/contact.html
@@ -3,12 +3,12 @@
 
 <head>
     <title>Επικοινωνία | Technodata</title>
-    <link rel="icon" type="image/x-icon" href="/assets/logo.png">
+    <link rel="icon" type="image/x-icon" href="../assets/logo.png">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="author" content="co-authored by Anastasios Mpourtsouklis, Dimitrios Paraskeuiotis">
-    <link rel="stylesheet" href="/Exercise4/css/style.css">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
@@ -16,20 +16,20 @@
     <div class="grid-container">
         <div class="header-item">
             <header class="header-light-color">
-                <a href="/Exercise4/index.html">
-                    <img srcset="/assets/Technodata-logos_black_SR.png 600w,
-                        /assets/Technodata-logos_black_MR.png 768w,
-                        /assets/Technodata-logos_black_LR.png 1000w" sizes="(max-width: 600px) 80vw,
+                <a href="index.html">
+                    <img srcset="../assets/Technodata-logos_black_SR.png 600w,
+                        ../assets/Technodata-logos_black_MR.png 768w,
+                        ../assets/Technodata-logos_black_LR.png 1000w" sizes="(max-width: 600px) 80vw,
                             (max-width: 768px) 100vw,
-                            1000px" src="/assets/Technodata-logos_black_LR.png" alt="Technodata λογότυτπο">
+                            1000px" src="../assets/Technodata-logos_black_LR.png" alt="Technodata λογότυτπο">
                 </a>
 
                 <nav class="navigation">
-                    <a href="/Exercise4/index.html">ΑΡΧΙΚΗ</a>
-                    <a href="/Exercise4/product-categories.html">ΚΑΤΗΓΟΡΙΕΣ ΠΡΟΪΟΝΤΩΝ</a>
-                    <a href="/Exercise4/stores.html">ΚΑΤΑΣΤΗΜΑΤΑ</a>
-                    <a href="/Exercise4/contact.html" class="active">ΕΠΙΚΟΙΝΩΝΙΑ</a>
-                    <a href="/Exercise4/about_us.html">ΣΧΕΤΙΚΑ ΜΕ ΕΜΑΣ</a>
+                    <a href="index.html">ΑΡΧΙΚΗ</a>
+                    <a href="product-categories.html">ΚΑΤΗΓΟΡΙΕΣ ΠΡΟΪΟΝΤΩΝ</a>
+                    <a href="stores.html">ΚΑΤΑΣΤΗΜΑΤΑ</a>
+                    <a href="contact.html" class="active">ΕΠΙΚΟΙΝΩΝΙΑ</a>
+                    <a href="about_us.html">ΣΧΕΤΙΚΑ ΜΕ ΕΜΑΣ</a>
                 </nav>
             </header>
         </div>
@@ -95,26 +95,26 @@
             <footer class="footer-content">
                 <h4>Βρείτε μας στα ακόλουθα social media</h4>
 
-                <a href="/Exercise4/index.html">
-                    <img src="/assets/facebook_logo.png" width="50" height="50" alt="Facebook λογότυπο">
+                <a href="index.html">
+                    <img src="../assets/facebook_logo.png" width="50" height="50" alt="Facebook λογότυπο">
                 </a>
 
-                <a href="/Exercise4/index.html">
-                    <img src="/assets/twitter_logo.png" width="50" height="50" alt="Twitter λογότυπο">
+                <a href="index.html">
+                    <img src="../assets/twitter_logo.png" width="50" height="50" alt="Twitter λογότυπο">
                 </a>
 
-                <a href="/Exercise4/index.html">
-                    <img src="/assets/instagram_new.png" width="50" height="50" alt="Instagram λογότυπο">
+                <a href="index.html">
+                    <img src="../assets/instagram_new.png" width="50" height="50" alt="Instagram λογότυπο">
                 </a>
 
-                <a href="/Exercise4/index.html">
-                    <img src="/assets/youtube_logo.png" width="50" height="50" alt="Youtube λογότυπο">
+                <a href="index.html">
+                    <img src="../assets/youtube_logo.png" width="50" height="50" alt="Youtube λογότυπο">
                 </a>
 
                 <h4>©2022 Techodata Computers</h4>
 
-                <a href="/Exercise4/index.html">
-                    <img src="/assets/Technodata-logos_cropped_footer.png" width="170" height="50"
+                <a href="index.html">
+                    <img src="../assets/Technodata-logos_cropped_footer.png" width="170" height="50"
                         alt="Tecnhodata λογότυπο">
                 </a>
             </footer>
