--- a/Exercise4/products-phones.html
+++ b/Exercise4/products-phones.html
@@ -3,32 +3,32 @@
 
 <head>
     <title>Κινητή Τηλεφωνία | Technodata</title>
-    <link rel="icon" type="image/x-icon" href="/assets/logo.png">
+    <link rel="icon" type="image/x-icon" href="../assets/logo.png">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="author" content="co-authored by Anastasios Mpourtsouklis, Dimitrios Paraskeuiotis">
-    <link rel="stylesheet" href="/Exercise4/css/style.css">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
     <div class="grid-container">
         <div class="header-item">
             <header class="header-light-color">
-                <a href="/Exercise4/index.html">
-                    <img srcset="/assets/Technodata-logos_black_SR.png 600w,
-                        /assets/Technodata-logos_black_MR.png 768w,
-                        /assets/Technodata-logos_black_LR.png 1000w" sizes="(max-width: 600px) 80vw,
+                <a href="index.html">
+                    <img srcset="../assets/Technodata-logos_black_SR.png 600w,
+                        ../assets/Technodata-logos_black_MR.png 768w,
+                        ../assets/Technodata-logos_black_LR.png 1000w" sizes="(max-width: 600px) 80vw,
                             (max-width: 768px) 100vw,
-                            1000px" src="/assets/Technodata-logos_black_LR.png" alt="Technodata λογότυτπο">
+                            1000px" src="../assets/Technodata-logos_black_LR.png" alt="Technodata λογότυτπο">
                 </a>
 
                 <nav class="navigation">
-                    <a href="/Exercise4/index.html">ΑΡΧΙΚΗ</a>
-                    <a href="/Exercise4/product-categories.html" class="active">ΚΑΤΗΓΟΡΙΕΣ ΠΡΟΪΟΝΤΩΝ</a>
-                    <a href="/Exercise4/stores.html">ΚΑΤΑΣΤΗΜΑΤΑ</a>
-                    <a href="/Exercise4/contact.html">ΕΠΙΚΟΙΝΩΝΙΑ</a>
-                    <a href="/Exercise4/about_us.html">ΣΧΕΤΙΚΑ ΜΕ ΕΜΑΣ</a>
+                    <a href="index.html">ΑΡΧΙΚΗ</a>
+                    <a href="product-categories.html" class="active">ΚΑΤΗΓΟΡΙΕΣ ΠΡΟΪΟΝΤΩΝ</a>
+                    <a href="stores.html">ΚΑΤΑΣΤΗΜΑΤΑ</a>
+                    <a href="contact.html">ΕΠΙΚΟΙΝΩΝΙΑ</a>
+                    <a href="about_us.html">ΣΧΕΤΙΚΑ ΜΕ ΕΜΑΣ</a>
                 </nav>
             </header>
         </div>
@@ -44,7 +44,7 @@
                 <section class="products">
                     <div class="product-card">
                         <div class="product-details">
-                            <a href="/Exercise4/product-iphone14-pro-max.html">
+                            <a href="product-iphone14-pro-max.html">
                                 <h1>Apple iPhone 14 Pro Max</h1>
                             </a>
 
@@ -52,9 +52,9 @@
 
                             <p class="reviews">Αξιολογήσεις: 4,8/5 αστέρια (543)</p>
 
-                            <a href="/Exercise4/product-iphone14-pro-max.html" class="control"></a>
+                            <a href="product-iphone14-pro-max.html" class="control"></a>
                             <button class="button"
-                                onclick="window.location.href='/Exercise4/product-iphone14-pro-max.html'">
+                                onclick="window.location.href='product-iphone14-pro-max.html'">
                                 <span class="price">€1549.00</span>
 
                                 <span class="buy">Αγορά</span>
@@ -62,7 +62,7 @@
                         </div>
 
                         <div class="product-image">
-                            <img class="image" src="/assets/iphone14pro.png" alt="Apple iPhone 14 Pro Max">
+                            <img class="image" src="../assets/iphone14pro.png" alt="Apple iPhone 14 Pro Max">
 
                             <div class="info">
                                 <h2>Περιγραφή</h2>
@@ -82,7 +82,7 @@
 
                     <div class="product-card">
                         <div class="product-details">
-                            <a href="/Exercise4/product-iphone14-pro-max.html">
+                            <a href="product-iphone14-pro-max.html">
                                 <h1>Samsung S22</h1>
                             </a>
 
@@ -90,9 +90,9 @@
 
                             <p class="reviews">Αξιολογήσεις: 4,8/5 αστέρια (764)</p>
 
-                            <a href="/Exercise4/product-iphone14-pro-max.html" class="control"></a>
+                            <a href="product-iphone14-pro-max.html" class="control"></a>
                             <button class="button"
-                                onclick="window.location.href='/Exercise4/product-iphone14-pro-max.html'">
+                                onclick="window.location.href='product-iphone14-pro-max.html'">
                                 <span class="price">€727.61</span>
 
                                 <span class="buy">Αγορά</span>
@@ -101,7 +101,7 @@
                         </div>
 
                         <div class="product-image">
-                            <img class="image" src="/assets/samsungs22.png" alt="Apple iPhone 14 Pro Max">
+                            <img class="image" src="../assets/samsungs22.png" alt="Apple iPhone 14 Pro Max">
 
                             <div class="info">
                                 <h2>Περιγραφή</h2>
@@ -121,7 +121,7 @@
 
                     <div class="product-card">
                         <div class="product-details">
-                            <a href="/Exercise4/product-iphone14-pro-max.html">
+                            <a href="product-iphone14-pro-max.html">
                                 <h1>Xiaomi 12T Pro</h1>
                             </a>
 
@@ -129,9 +129,9 @@
 
                             <p class="reviews">Αξιολογήσεις: 4,5/5 αστέρια (1156)</p>
 
-                            <a href="/Exercise4/product-iphone14-pro-max.html" class="control"></a>
+                            <a href="product-iphone14-pro-max.html" class="control"></a>
                             <button class="button"
-                                onclick="window.location.href='/Exercise4/product-iphone14-pro-max.html'">
+                                onclick="window.location.href='product-iphone14-pro-max.html'">
                                 <span class="price">€792.00</span>
 
                                 <span class="buy">Αγορά</span>
@@ -140,7 +140,7 @@
                         </div>
 
                         <div class="product-image">
-                            <img class="image" src="/assets/xiaomi.png" alt="Xiaomi 12T Pro">
+                            <img class="image" src="../assets/xiaomi.png" alt="Xiaomi 12T Pro">
 
                             <div class="info">
                                 <h2>Περιγραφή</h2>
@@ -160,7 +160,7 @@
 
                     <div class="product-card">
                         <div class="product-details">
-                            <a href="/Exercise4/product-iphone14-pro-max.html">
+                            <a href="product-iphone14-pro-max.html">
                                 <h1>Apple iPhone 11</h1>
                             </a>
 
@@ -168,9 +168,9 @@
 
                             <p class="reviews">Αξιολογήσεις: 4,4/5 αστέρια (725)</p>
 
-                            <a href="/Exercise4/product-iphone14-pro-max.html" class="control"></a>
+                            <a href="product-iphone14-pro-max.html" class="control"></a>
                             <button class="button"
-                                onclick="window.location.href='/Exercise4/product-iphone14-pro-max.html'">
+                                onclick="window.location.href='product-iphone14-pro-max.html'">
                                 <span class="price">€588.44</span>
 
                                 <span class="buy">Αγορά</span>
@@ -179,7 +179,7 @@
                         </div>
 
                         <div class="product-image">
-                            <img class="image" src="/assets/iphone_old.png" alt="Apple iPhone 11">
+                            <img class="image" src="../assets/iphone_old.png" alt="Apple iPhone 11">
 
                             <div class="info">
                                 <h2>Περιγραφή</h2>
@@ -199,7 +199,7 @@
 
                     <div class="product-card">
                         <div class="product-details">
-                            <a href="/Exercise4/product-iphone14-pro-max.html">
+                            <a href="product-iphone14-pro-max.html">
                                 <h1>Samsung S10 Ultra</h1>
                             </a>
 
@@ -207,9 +207,9 @@
 
                             <p class="reviews">Αξιολογήσεις: 4,6/5 αστέρια (532))</p>
 
-                            <a href="/Exercise4/product-iphone14-pro-max.html" class="control"></a>
+                            <a href="product-iphone14-pro-max.html" class="control"></a>
                             <button class="button"
-                                onclick="window.location.href='/Exercise4/product-iphone14-pro-max.html'">
+                                onclick="window.location.href='product-iphone14-pro-max.html'">
                                 <span class="price">€709.99</span>
 
                                 <span class="buy">Αγορά</span>
@@ -218,7 +218,7 @@
                         </div>
 
                         <div class="product-image">
-                            <img class="image" src="/assets/samsung_old.png" alt="Samsung S10 Ultra">
+                            <img class="image" src="../assets/samsung_old.png" alt="Samsung S10 Ultra">
 
                             <div class="info">
                                 <h2>Περιγραφή</h2>
@@ -238,7 +238,7 @@
 
                     <div class="product-card">
                         <div class="product-details">
-                            <a href="/Exercise4/product-iphone14-pro-max.html">
+                            <a href="product-iphone14-pro-max.html">
                                 <h1>Xiaomi Note 9 Pro</h1>
                             </a>
 
@@ -246,9 +246,9 @@
 
                             <p class="reviews">Αξιολογήσεις: 4,3/5 αστέρια (1675)</p>
 
-                            <a href="/Exercise4/product-iphone14-pro-max.html" class="control"></a>
+                            <a href="product-iphone14-pro-max.html" class="control"></a>
                             <button class="button"
-                                onclick="window.location.href='/Exercise4/product-iphone14-pro-max.html'">
+                                onclick="window.location.href='product-iphone14-pro-max.html'">
                                 <span class="price">€249.90</span>
 
                                 <span class="buy">Αγορά</span>
@@ -257,7 +257,7 @@
                         </div>
 
                         <div class="product-image">
-                            <img class="image" src="/assets/xiaomi_note9.png" alt="Xiaomi Note 9 Pro">
+                            <img class="image" src="../assets/xiaomi_note9.png" alt="Xiaomi Note 9 Pro">
 
                             <div class="info">
                                 <h2>Περιγραφή</h2>
@@ -282,25 +282,25 @@
             <footer class="footer-content">
                 <h4>Βρείτε μας στα ακόλουθα social media</h4>
 
-                <a href="/Exercise4/index.html">
-                    <img class="image" src="/assets/facebook_logo.png" width="50" height="50" alt="Facebook λογότυπο">
+                <a href="index.html">
+                    <img class="image" src="../assets/facebook_logo.png" width="50" height="50" alt="Facebook λογότυπο">
                 </a>
 
-                <a href="/Exercise4/index.html">
-                    <img class="image" src="/assets/twitter_logo.png" width="50" height="50" alt="Twitter λογότυπο">
+                <a href="index.html">
+                    <img class="image" src="../assets/twitter_logo.png" width="50" height="50" alt="Twitter λογότυπο">
                 </a>
 
-                <a href="/Exercise4/index.html">
-                    <img class="image" src="/assets/instagram_new.png" width="50" height="50" alt="Instagram λογότυπο">
+                <a href="index.html">
+                    <img class="image" src="../assets/instagram_new.png" width="50" height="50" alt="Instagram λογότυπο">
                 </a>
 
-                <a href="/Exercise4/index.html">
-                    <img class="image" src="/assets/youtube_logo.png" width="50" height="50" alt="Youtube λογότυπο">
+                <a href="index.html">
+                    <img class="image" src="../assets/youtube_logo.png" width="50" height="50" alt="Youtube λογότυπο">
                 </a>
 
                 <h4>©2022 Techodata Computers</h4>
 
-                <a href="/Exercise4/index.html"><img class="image" src="/assets/Technodata-logos_cropped_footer.png"
+                <a href="index.html"><img class="image" src="../assets/Technodata-logos_cropped_footer.png"
                         width="170" height="50" alt="Tecnhodata λογότυπο">
                 </a>
             </footer>
