--- a/Exercise5/product-categories.html
+++ b/Exercise5/product-categories.html
@@ -3,35 +3,35 @@
 
 <head>
     <title>Κατηγορίες Προϊόντων | TechnoData</title>
-    <link rel="icon" type="image/x-icon" href="/assets/logo.png">
+    <link rel="icon" type="image/x-icon" href="../assets/logo.png">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="author" content="co-authored by Anastasios Mpourtsouklis, Dimitrios Paraskeuiotis">
-    <link rel="stylesheet" href="/Exercise5/css/style.css">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
     <div class="grid-container">
         <div class="header-item">
             <header class="header-light-color">
-                <a href="/Exercise5/index.html">
-                    <img srcset="/assets/Technodata-logos_black_SR.png 600w,
-                        /assets/Technodata-logos_black_MR.png 768w,
-                        /assets/Technodata-logos_black_LR.png 1000w" sizes="(max-width: 600px) 80vw,
+                <a href="index.html">
+                    <img srcset="../assets/Technodata-logos_black_SR.png 600w,
+                        ../assets/Technodata-logos_black_MR.png 768w,
+                        ../assets/Technodata-logos_black_LR.png 1000w" sizes="(max-width: 600px) 80vw,
                             (max-width: 768px) 100vw,
-                            1000px" src="/assets/Technodata-logos_black_LR.png" alt="Technodata λογότυτπο">
+                            1000px" src="../assets/Technodata-logos_black_LR.png" alt="Technodata λογότυτπο">
                 </a>
 
                 <nav class="navigation">
-                    <a href="/Exercise5/index.html">ΑΡΧΙΚΗ</a>
-                    <a href="/Exercise5/product-categories.html" class="active">ΚΑΤΗΓΟΡΙΕΣ ΠΡΟΪΟΝΤΩΝ</a>
-                    <a href="/Exercise5/stores.html">ΚΑΤΑΣΤΗΜΑΤΑ</a>
-                    <a href="/Exercise5/contact.html">ΕΠΙΚΟΙΝΩΝΙΑ</a>
-                    <a href="/Exercise5/about_us.html">ΣΧΕΤΙΚΑ ΜΕ ΕΜΑΣ</a>
+                    <a href="index.html">ΑΡΧΙΚΗ</a>
+                    <a href="product-categories.html" class="active">ΚΑΤΗΓΟΡΙΕΣ ΠΡΟΪΟΝΤΩΝ</a>
+                    <a href="stores.html">ΚΑΤΑΣΤΗΜΑΤΑ</a>
+                    <a href="contact.html">ΕΠΙΚΟΙΝΩΝΙΑ</a>
+                    <a href="about_us.html">ΣΧΕΤΙΚΑ ΜΕ ΕΜΑΣ</a>
                     <div id="navigationRight">
-                        <a href="/Exercise5/sign_up.html">ΣΥΝΔΕΣΗ</a>
-                        <a href="/Exercise5/sign_up.html">ΕΓΓΡΑΦΗ</a>
+                        <a href="sign_up.html">ΣΥΝΔΕΣΗ</a>
+                        <a href="sign_up.html">ΕΓΓΡΑΦΗ</a>
                     </div>
                 </nav>
             </header>
@@ -46,8 +46,8 @@
 
                     <ul>
                         <li class="category-card">
-                            <a href="/Exercise5/products-phones.html">
-                                <img class="image" src="/assets/phones.png" width="200" height="200"
+                            <a href="products-phones.html">
+                                <img class="image" src="../assets/phones.png" width="200" height="200"
                                     alt="εικόνα κατηγορίας κινητών τηλεφώνων">
 
                                 <h3 class="category-name">Κινητή Τηλεφωνία</h3>
@@ -55,8 +55,8 @@
                         </li>
 
                         <li class="category-card">
-                            <a href="/Exercise5/product-categories.html">
-                                <img class="image" src="/assets/tablets.png" width="200" height="200"
+                            <a href="product-categories.html">
+                                <img class="image" src="../assets/tablets.png" width="200" height="200"
                                     alt="εικόνα κατηγορίας tablet">
 
                                 <h3 class="category-name">
@@ -66,8 +66,8 @@
                         </li>
 
                         <li class="category-card">
-                            <a href="/Exercise5/products-pcs.html">
-                                <img class="image" src="/assets/pcs.png" width="200" height="200"
+                            <a href="products-pcs.html">
+                                <img class="image" src="../assets/pcs.png" width="200" height="200"
                                     alt="εικόνα κατηγορίας ήχου">
 
 
@@ -78,8 +78,8 @@
                         </li>
 
                         <li class="category-card">
-                            <a href="/Exercise5/product-categories.html">
-                                <img class="image" src="/assets/tvs.png" width="200" height="200"
+                            <a href="product-categories.html">
+                                <img class="image" src="../assets/tvs.png" width="200" height="200"
                                     alt="εικόνα κατηγορίας εικόνας">
 
 
@@ -90,8 +90,8 @@
                         </li>
 
                         <li class="category-card">
-                            <a href="/Exercise5/product-categories.html">
-                                <img class="image" src="/assets/sound.png" width="200" height="200"
+                            <a href="product-categories.html">
+                                <img class="image" src="../assets/sound.png" width="200" height="200"
                                     alt="εικόνα κατηγορίας ήχου">
 
 
@@ -102,8 +102,8 @@
                         </li>
 
                         <li class="category-card">
-                            <a href="/Exercise5/product-categories.html">
-                                <img class="image" src="/assets/consoles.png" width="200" height="200"
+                            <a href="product-categories.html">
+                                <img class="image" src="../assets/consoles.png" width="200" height="200"
                                     alt="εικόνα κατηγορίας ήχου">
 
                                 <h3 class="category-name">
@@ -119,8 +119,8 @@
 
                     <ul>
                         <li class="category-card">
-                            <a href="/Exercise5/product-categories.html">
-                                <img class="image" src="/assets/fridges.png" width="200" height="200"
+                            <a href="product-categories.html">
+                                <img class="image" src="../assets/fridges.png" width="200" height="200"
                                     alt="εικόνα κατηγορίας ψυγείων">
 
                                 <h3 class="category-name">
@@ -130,8 +130,8 @@
                         </li>
 
                         <li class="category-card">
-                            <a href="/Exercise5/product-categories.html">
-                                <img class="image" src="/assets/ovens.png" width="200" height="200"
+                            <a href="product-categories.html">
+                                <img class="image" src="../assets/ovens.png" width="200" height="200"
                                     alt="εικόνα κατηγορίας κουζινών">
 
                                 <h3 class="category-name">
@@ -141,8 +141,8 @@
                         </li>
 
                         <li class="category-card">
-                            <a href="/Exercise5/product-categories.html">
-                                <img class="image" src="/assets/absorbers.png" width="200" height="200"
+                            <a href="product-categories.html">
+                                <img class="image" src="../assets/absorbers.png" width="200" height="200"
                                     alt="εικόνα κατηγορίας κουζινών">
 
                                 <h3 class="category-name">
@@ -152,8 +152,8 @@
                         </li>
 
                         <li class="category-card">
-                            <a href="/Exercise5/product-categories.html">
-                                <img class="image" src="/assets/dishwashers.png" width="200" height="200"
+                            <a href="product-categories.html">
+                                <img class="image" src="../assets/dishwashers.png" width="200" height="200"
                                     alt="εικόνα κατηγορίας πληντύριων πιάτων">
 
                                 <h3 class="category-name">
@@ -163,8 +163,8 @@
                         </li>
 
                         <li class="category-card">
-                            <a href="/Exercise5/product-categories.html">
-                                <img class="image" src="/assets/vacuums.png" width="200" height="200"
+                            <a href="product-categories.html">
+                                <img class="image" src="../assets/vacuums.png" width="200" height="200"
                                     alt="εικόνα κατηγορίας">
 
                                 <h3 class="category-name">
@@ -174,8 +174,8 @@
                         </li>
 
                         <li class="category-card">
-                            <a href="/Exercise5/product-categories.html">
-                                <img class="image" src="/assets/washing-machines.png" width="200" height="200"
+                            <a href="product-categories.html">
+                                <img class="image" src="../assets/washing-machines.png" width="200" height="200"
                                     alt="εικόνα κατηγορίας">
 
                                 <h3 class="category-name">
@@ -191,8 +191,8 @@
 
                     <ul>
                         <li class="category-card">
-                            <a href="/Exercise5/product-categories.html">
-                                <img class="image" src="/assets/gps.png" width="200" height="200"
+                            <a href="product-categories.html">
+                                <img class="image" src="../assets/gps.png" width="200" height="200"
                                     alt="εικόνα κατηγορίας ψυγείων">
 
                                 <h3 class="category-name">
@@ -202,8 +202,8 @@
                         </li>
 
                         <li class="category-card">
-                            <a href="/Exercise5/product-categories.html">
-                                <img class="image" src="/assets/alarms.png" width="200" height="200"
+                            <a href="product-categories.html">
+                                <img class="image" src="../assets/alarms.png" width="200" height="200"
                                     alt="εικόνα κατηγορίας κουζινών">
 
                                 <h3 class="category-name">
@@ -213,8 +213,8 @@
                         </li>
 
                         <li class="category-card">
-                            <a href="/Exercise5/product-categories.html">
-                                <img class="image" src="/assets/reverse-cameras.png" width="200" height="200"
+                            <a href="product-categories.html">
+                                <img class="image" src="../assets/reverse-cameras.png" width="200" height="200"
                                     alt="εικόνα κατηγορίας κουζινών">
 
                                 <h3 class="category-name">
@@ -224,8 +224,8 @@
                         </li>
 
                         <li class="category-card">
-                            <a href="/Exercise5/product-categories.html">
-                                <img class="image" src="/assets/parking-sensors.png" width="200" height="200"
+                            <a href="product-categories.html">
+                                <img class="image" src="../assets/parking-sensors.png" width="200" height="200"
                                     alt="εικόνα κατηγορίας πληντύριων πιάτων">
 
                                 <h3 class="category-name">
@@ -235,8 +235,8 @@
                         </li>
 
                         <li class="category-card">
-                            <a href="/Exercise5/product-categories.html">
-                                <img class="image" src="/assets/car-lighting.png" width="200" height="200"
+                            <a href="product-categories.html">
+                                <img class="image" src="../assets/car-lighting.png" width="200" height="200"
                                     alt="εικόνα κατηγορίας">
 
                                 <h3 class="category-name">
@@ -246,8 +246,8 @@
                         </li>
 
                         <li class="category-card">
-                            <a href="/Exercise5/product-categories.html">
-                                <img class="image" src="/assets/car-accessories.png" width="200" height="200"
+                            <a href="product-categories.html">
+                                <img class="image" src="../assets/car-accessories.png" width="200" height="200"
                                     alt="εικόνα κατηγορίας">
 
                                 <h3 class="category-name">
@@ -263,8 +263,8 @@
 
                     <ul>
                         <li class="product-card">
-                            <a href="/Exercise5/product-categories.html">
-                                <img class="image" src="/assets/popular0.png" width="200" height="200" alt="">
+                            <a href="product-categories.html">
+                                <img class="image" src="../assets/popular0.png" width="200" height="200" alt="">
                                 <h3>Κινητή Τηλεφωνία</h3>
                                 <p class="name">Apple iPhone 13 5G (4GB/128GB)</p>
                                 <p class="price">865,70€</p>
@@ -272,8 +272,8 @@
                         </li>
 
                         <li class="product-card">
-                            <a href="/Exercise5/product-categories.html">
-                                <img class="image" src="/assets/popular1.png" width="200" height="200" alt="">
+                            <a href="product-categories.html">
+                                <img class="image" src="../assets/popular1.png" width="200" height="200" alt="">
                                 <h3>Ηλεκτρονικοί Υπολογιστές</h3>
                                 <p class="name">Apple MacBook Air 13.3" (2020)</p>
                                 <p class="price">1.130,00€</p>
@@ -281,8 +281,8 @@
                         </li>
 
                         <li class="product-card">
-                            <a href="/Exercise5/product-categories.html">
-                                <img class="image" src="/assets/popular2.png" width="200" height="200" alt="">
+                            <a href="product-categories.html">
+                                <img class="image" src="../assets/popular2.png" width="200" height="200" alt="">
                                 <h3>Πληντύρια Ρούχων</h3>
                                 <p class="name">AEG LFR73964VG</p>
                                 <p class="price">849,00€</p>
@@ -290,8 +290,8 @@
                         </li>
 
                         <li class="product-card">
-                            <a href="/Exercise5/product-categories.html">
-                                <img class="image" src="/assets/popular3.png" width="200" height="200" alt="">
+                            <a href="product-categories.html">
+                                <img class="image" src="../assets/popular3.png" width="200" height="200" alt="">
                                 <h3>Αξεσουάρ Αυτοκινήτου</h3>
                                 <p class="name">Baseus 2xUSB 5A</p>
                                 <p class="price">7,98€</p>
@@ -299,8 +299,8 @@
                         </li>
 
                         <li class="product-card">
-                            <a href="/Exercise5/product-categories.html">
-                                <img class="image" src="/assets/popular4.png" width="200" height="200" alt="">
+                            <a href="product-categories.html">
+                                <img class="image" src="../assets/popular4.png" width="200" height="200" alt="">
                                 <h3>Ψυγεία</h3>
                                 <p class="name">Bosch KGN36NLEA</p>
                                 <p class="price">469,00€</p>
@@ -308,8 +308,8 @@
                         </li>
 
                         <li class="product-card">
-                            <a href="/Exercise5/product-categories.html">
-                                <img class="image" src="/assets/popular5.png" width="200" height="200" alt="">
+                            <a href="product-categories.html">
+                                <img class="image" src="../assets/popular5.png" width="200" height="200" alt="">
                                 <h3>Ηλεκτρονικοί Υπολογιστές</h3>
                                 <p class="name">Apple iMac 24" 2021</p>
                                 <p class="price">1.630,00€</p>
@@ -324,26 +324,26 @@
             <footer class="footer-content">
                 <h4>Βρείτε μας στα ακόλουθα social media</h4>
 
-                <a href="/Exercise5/index.html">
-                    <img src="/assets/facebook_logo.png" width="50" height="50" alt="Facebook λογότυπο">
+                <a href="index.html">
+                    <img src="../assets/facebook_logo.png" width="50" height="50" alt="Facebook λογότυπο">
                 </a>
 
-                <a href="/Exercise5/index.html">
-                    <img src="/assets/twitter_logo.png" width="50" height="50" alt="Twitter λογότυπο">
+                <a href="index.html">
+                    <img src="../assets/twitter_logo.png" width="50" height="50" alt="Twitter λογότυπο">
                 </a>
 
-                <a href="/Exercise5/index.html">
-                    <img src="/assets/instagram_new.png" width="50" height="50" alt="Instagram λογότυπο">
+                <a href="index.html">
+                    <img src="../assets/instagram_new.png" width="50" height="50" alt="Instagram λογότυπο">
                 </a>
 
-                <a href="/Exercise5/index.html">
-                    <img src="/assets/youtube_logo.png" width="50" height="50" alt="Youtube λογότυπο">
+                <a href="index.html">
+                    <img src="../assets/youtube_logo.png" width="50" height="50" alt="Youtube λογότυπο">
                 </a>
 
                 <h4>©2022 Techodata Computers</h4>
 
-                <a href="/Exercise5/index.html">
-                    <img src="/assets/Technodata-logos_cropped_footer.png" width="170" height="50"
+                <a href="index.html">
+                    <img src="../assets/Technodata-logos_cropped_footer.png" width="170" height="50"
                         alt="Tecnhodata λογότυπο">
                 </a>
             </footer>
