--- a/Exercise5/products-phones.html
+++ b/Exercise5/products-phones.html
@@ -3,35 +3,35 @@
 
 <head>
     <title>Κινητή Τηλεφωνία | Technodata</title>
-    <link rel="icon" type="image/x-icon" href="/assets/logo.png">
+    <link rel="icon" type="image/x-icon" href="../assets/logo.png">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="author" content="co-authored by Anastasios Mpourtsouklis, Dimitrios Paraskeuiotis">
-    <link rel="stylesheet" href="/Exercise5/css/style.css">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
     <div class="grid-container">
         <div class="header-item">
             <header class="header-light-color">
-                <a href="/Exercise5/index.html">
-                    <img srcset="/assets/Technodata-logos_black_SR.png 600w,
-                        /assets/Technodata-logos_black_MR.png 768w,
-                        /assets/Technodata-logos_black_LR.png 1000w" sizes="(max-width: 600px) 80vw,
+                <a href="index.html">
+                    <img srcset="../assets/Technodata-logos_black_SR.png 600w,
+                        ../assets/Technodata-logos_black_MR.png 768w,
+                        ../assets/Technodata-logos_black_LR.png 1000w" sizes="(max-width: 600px) 80vw,
                             (max-width: 768px) 100vw,
-                            1000px" src="/assets/Technodata-logos_black_LR.png" alt="Technodata λογότυτπο">
+                            1000px" src="../assets/Technodata-logos_black_LR.png" alt="Technodata λογότυτπο">
                 </a>
 
                 <nav class="navigation">
-                    <a href="/Exercise5/index.html">ΑΡΧΙΚΗ</a>
-                    <a href="/Exercise5/product-categories.html" class="active">ΚΑΤΗΓΟΡΙΕΣ ΠΡΟΪΟΝΤΩΝ</a>
-                    <a href="/Exercise5/stores.html">ΚΑΤΑΣΤΗΜΑΤΑ</a>
-                    <a href="/Exercise5/contact.html">ΕΠΙΚΟΙΝΩΝΙΑ</a>
-                    <a href="/Exercise5/about_us.html">ΣΧΕΤΙΚΑ ΜΕ ΕΜΑΣ</a>
+                    <a href="index.html">ΑΡΧΙΚΗ</a>
+                    <a href="product-categories.html" class="active">ΚΑΤΗΓΟΡΙΕΣ ΠΡΟΪΟΝΤΩΝ</a>
+                    <a href="stores.html">ΚΑΤΑΣΤΗΜΑΤΑ</a>
+                    <a href="contact.html">ΕΠΙΚΟΙΝΩΝΙΑ</a>
+                    <a href="about_us.html">ΣΧΕΤΙΚΑ ΜΕ ΕΜΑΣ</a>
                     <div id="navigationRight">
-                        <a href="/Exercise5/sign_up.html">ΣΥΝΔΕΣΗ</a>
-                        <a href="/Exercise5/sign_up.html">ΕΓΓΡΑΦΗ</a>
+                        <a href="sign_up.html">ΣΥΝΔΕΣΗ</a>
+                        <a href="sign_up.html">ΕΓΓΡΑΦΗ</a>
                     </div>
                 </nav>
             </header>
@@ -48,7 +48,7 @@
                 <section class="products">
                     <div class="product-card">
                         <div class="product-details">
-                            <a href="/Exercise5/product-iphone14-pro-max.html">
+                            <a href="product-iphone14-pro-max.html">
                                 <h1>Apple iPhone 14 Pro Max</h1>
                             </a>
 
@@ -56,9 +56,9 @@
 
                             <p class="reviews">Αξιολογήσεις: 4,8/5 αστέρια (543)</p>
 
-                            <a href="/Exercise5/product-iphone14-pro-max.html" class="control"></a>
+                            <a href="product-iphone14-pro-max.html" class="control"></a>
                             <button class="button"
-                                onclick="window.location.href='/Exercise5/product-iphone14-pro-max.html'">
+                                onclick="window.location.href='product-iphone14-pro-max.html'">
                                 <span class="price">€1549.00</span>
 
                                 <span class="buy">Αγορά</span>
@@ -67,7 +67,7 @@
                         </div>
 
                         <div class="product-image">
-                            <img class="image" src="/assets/iphone14pro.png" alt="Apple iPhone 14 Pro Max">
+                            <img class="image" src="../assets/iphone14pro.png" alt="Apple iPhone 14 Pro Max">
 
                             <div class="info">
                                 <h2>Περιγραφή</h2>
@@ -87,7 +87,7 @@
 
                     <div class="product-card">
                         <div class="product-details">
-                            <a href="/Exercise5/product-iphone14-pro-max.html">
+                            <a href="product-iphone14-pro-max.html">
                                 <h1>Samsung S22</h1>
                             </a>
 
@@ -95,9 +95,9 @@
 
                             <p class="reviews">Αξιολογήσεις: 4,8/5 αστέρια (764)</p>
 
-                            <a href="/Exercise5/product-iphone14-pro-max.html" class="control"></a>
+                            <a href="product-iphone14-pro-max.html" class="control"></a>
                             <button class="button"
-                                onclick="window.location.href='/Exercise5/product-iphone14-pro-max.html'">
+                                onclick="window.location.href='product-iphone14-pro-max.html'">
                                 <span class="price">€727.61</span>
 
                                 <span class="buy">Αγορά</span>
@@ -106,7 +106,7 @@
                         </div>
 
                         <div class="product-image">
-                            <img class="image" src="/assets/samsungs22.png" alt="Apple iPhone 14 Pro Max">
+                            <img class="image" src="../assets/samsungs22.png" alt="Apple iPhone 14 Pro Max">
 
                             <div class="info">
                                 <h2>Περιγραφή</h2>
@@ -126,7 +126,7 @@
 
                     <div class="product-card">
                         <div class="product-details">
-                            <a href="/Exercise5/product-iphone14-pro-max.html">
+                            <a href="product-iphone14-pro-max.html">
                                 <h1>Xiaomi 12T Pro</h1>
                             </a>
 
@@ -134,9 +134,9 @@
 
                             <p class="reviews">Αξιολογήσεις: 4,5/5 αστέρια (1156)</p>
 
-                            <a href="/Exercise5/product-iphone14-pro-max.html" class="control"></a>
+                            <a href="product-iphone14-pro-max.html" class="control"></a>
                             <button class="button"
-                                onclick="window.location.href='/Exercise5/product-iphone14-pro-max.html'">
+                                onclick="window.location.href='product-iphone14-pro-max.html'">
                                 <span class="price">€792.00</span>
 
                                 <span class="buy">Αγορά</span>
@@ -145,7 +145,7 @@
                         </div>
 
                         <div class="product-image">
-                            <img class="image" src="/assets/xiaomi.png" alt="Xiaomi 12T Pro">
+                            <img class="image" src="../assets/xiaomi.png" alt="Xiaomi 12T Pro">
 
                             <div class="info">
                                 <h2>Περιγραφή</h2>
@@ -165,7 +165,7 @@
 
                     <div class="product-card">
                         <div class="product-details">
-                            <a href="/Exercise5/product-iphone14-pro-max.html">
+                            <a href="product-iphone14-pro-max.html">
                                 <h1>Apple iPhone 11</h1>
                             </a>
 
@@ -173,9 +173,9 @@
 
                             <p class="reviews">Αξιολογήσεις: 4,4/5 αστέρια (725)</p>
 
-                            <a href="/Exercise5/product-iphone14-pro-max.html" class="control"></a>
+                            <a href="product-iphone14-pro-max.html" class="control"></a>
                             <button class="button"
-                                onclick="window.location.href='/Exercise5/product-iphone14-pro-max.html'">
+                                onclick="window.location.href='product-iphone14-pro-max.html'">
                                 <span class="price">€588.44</span>
 
                                 <span class="buy">Αγορά</span>
@@ -183,7 +183,7 @@
                         </div>
 
                         <div class="product-image">
-                            <img class="image" src="/assets/iphone_old.png" alt="Apple iPhone 11">
+                            <img class="image" src="../assets/iphone_old.png" alt="Apple iPhone 11">
 
                             <div class="info">
                                 <h2>Περιγραφή</h2>
@@ -203,7 +203,7 @@
 
                     <div class="product-card">
                         <div class="product-details">
-                            <a href="/Exercise5/product-iphone14-pro-max.html">
+                            <a href="product-iphone14-pro-max.html">
                                 <h1>Samsung S10 Ultra</h1>
                             </a>
 
@@ -211,9 +211,9 @@
 
                             <p class="reviews">Αξιολογήσεις: 4,6/5 αστέρια (532))</p>
 
-                            <a href="/Exercise5/product-iphone14-pro-max.html" class="control"></a>
+                            <a href="product-iphone14-pro-max.html" class="control"></a>
                             <button class="button"
-                                onclick="window.location.href='/Exercise5/product-iphone14-pro-max.html'">
+                                onclick="window.location.href='product-iphone14-pro-max.html'">
                                 <span class="price">€709.99</span>
 
                                 <span class="buy">Αγορά</span>
@@ -221,7 +221,7 @@
                         </div>
 
                         <div class="product-image">
-                            <img class="image" src="/assets/samsung_old.png" alt="Samsung S10 Ultra">
+                            <img class="image" src="../assets/samsung_old.png" alt="Samsung S10 Ultra">
 
                             <div class="info">
                                 <h2>Περιγραφή</h2>
@@ -241,7 +241,7 @@
 
                     <div class="product-card">
                         <div class="product-details">
-                            <a href="/Exercise5/product-iphone14-pro-max.html">
+                            <a href="product-iphone14-pro-max.html">
                                 <h1>Xiaomi Note 9 Pro</h1>
                             </a>
 
@@ -249,9 +249,9 @@
 
                             <p class="reviews">Αξιολογήσεις: 4,3/5 αστέρια (1675)</p>
 
-                            <a href="/Exercise5/product-iphone14-pro-max.html" class="control"></a>
+                            <a href="product-iphone14-pro-max.html" class="control"></a>
                             <button class="button"
-                                onclick="window.location.href='/Exercise5/product-iphone14-pro-max.html'">
+                                onclick="window.location.href='product-iphone14-pro-max.html'">
                                 <span class="price">€249.90</span>
 
                                 <span class="buy">Αγορά</span>
@@ -260,7 +260,7 @@
                         </div>
 
                         <div class="product-image">
-                            <img class="image" src="/assets/xiaomi_note9.png" alt="Xiaomi Note 9 Pro">
+                            <img class="image" src="../assets/xiaomi_note9.png" alt="Xiaomi Note 9 Pro">
 
                             <div class="info">
                                 <h2>Περιγραφή</h2>
@@ -285,25 +285,25 @@
             <footer class="footer-content">
                 <h4>Βρείτε μας στα ακόλουθα social media</h4>
 
-                <a href="/Exercise5/index.html">
-                    <img class="image" src="/assets/facebook_logo.png" width="50" height="50" alt="Facebook λογότυπο">
+                <a href="index.html">
+                    <img class="image" src="../assets/facebook_logo.png" width="50" height="50" alt="Facebook λογότυπο">
                 </a>
 
-                <a href="/Exercise5/index.html">
-                    <img class="image" src="/assets/twitter_logo.png" width="50" height="50" alt="Twitter λογότυπο">
+                <a href="index.html">
+                    <img class="image" src="../assets/twitter_logo.png" width="50" height="50" alt="Twitter λογότυπο">
                 </a>
 
-                <a href="/Exercise5/index.html">
-                    <img class="image" src="/assets/instagram_new.png" width="50" height="50" alt="Instagram λογότυπο">
+                <a href="index.html">
+                    <img class="image" src="../assets/instagram_new.png" width="50" height="50" alt="Instagram λογότυπο">
                 </a>
 
-                <a href="/Exercise5/index.html">
-                    <img class="image" src="/assets/youtube_logo.png" width="50" height="50" alt="Youtube λογότυπο">
+                <a href="index.html">
+                    <img class="image" src="../assets/youtube_logo.png" width="50" height="50" alt="Youtube λογότυπο">
                 </a>
 
                 <h4>©2022 Techodata Computers</h4>
 
-                <a href="/Exercise5/index.html"><img class="image" src="/assets/Technodata-logos_cropped_footer.png"
+                <a href="index.html"><img class="image" src="../assets/Technodata-logos_cropped_footer.png"
                         width="170" height="50" alt="Tecnhodata λογότυπο">
                 </a>
             </footer>
